iptables-before-ipset
# Generated by iptables-save v1.4.7 on Thu Apr  2 04:38:31 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [497:94527]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A INPUT -s 10.0.0.0/8 -i eth1 -j LOG --log-prefix "IP DROP SPOOF A: "
-A INPUT -s 172.16.0.0/12 -i eth1 -j LOG --log-prefix "IP DROP SPOOF B: "
-A INPUT -s 192.168.0.0/16 -i eth1 -j LOG --log-prefix "IP DROP SPOOF C: "
-A INPUT -s 224.0.0.0/4 -i eth1 -j LOG --log-prefix "IP DROP MULTICAST D: "
-A INPUT -s 240.0.0.0/5 -i eth1 -j LOG --log-prefix "IP DROP SPOOF E: "
-A INPUT -d 127.0.0.0/8 -i eth1 -j LOG --log-prefix "IP DROP LOOPBACK: "
#Syn Flood Limiter
-A INPUT -p tcp --syn -m limit --limit 5/s -j ACCEPT
#Forwarding to Redhat Firewall
-A FORWARD -j RH-Firewall-1-INPUT
#Allow Localhost
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
#Allow ICMP
#-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
#-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
#-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
#-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#Allow Different Connection States
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Allow Our Ranges
-A RH-Firewall-1-INPUT  -s 182.176.221.32/27 -j ACCEPT
-A RH-Firewall-1-INPUT  -s 182.176.221.64/30 -j ACCEPT
-A RH-Firewall-1-INPUT  -s 182.176.220.33/27 -j ACCEPT
#Blocking Bad Guys
-A RH-Firewall-1-INPUT -s 8.28.53.131 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.177.144 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.102.49 -j DROP
-A RH-Firewall-1-INPUT -s 50.30.47.46 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.136.41 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.104.147 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.207.16 -j DROP
-A RH-Firewall-1-INPUT -s 217.172.190.227 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.240.74 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.52.216 -j DROP
-A RH-Firewall-1-INPUT -s 174.140.165.135 -j DROP
-A RH-Firewall-1-INPUT -s 95.167.71.171 -j DROP
-A RH-Firewall-1-INPUT -s 124.137.10.221 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.14.38 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.32.3 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.174 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.92.44 -j DROP
-A RH-Firewall-1-INPUT -s 192.163.206.159 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.16 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.3.69 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.90.162 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.25.28 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.34.151 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.78 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.93.153 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.92.145 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.63.74 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.28 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.69 -j DROP
-A RH-Firewall-1-INPUT -s 209.15.226.152 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.56.116 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.211.176 -j DROP
-A RH-Firewall-1-INPUT -s 162.252.240.115 -j DROP
-A RH-Firewall-1-INPUT -s 178.33.192.154 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.176 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.179.230 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.153.106 -j DROP
-A RH-Firewall-1-INPUT -s 192.254.77.178 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.127 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.101.214 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.234 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.29.39 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.101.250 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.133 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.31.170 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.82.42 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.230.2 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.31.15 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.23.19 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.189.154 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.53.202 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.7.82 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.107 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.14.2 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.190.42 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.154.38 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.172.170 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.126 -j DROP
-A RH-Firewall-1-INPUT -s 151.229.32.105 -j DROP
-A RH-Firewall-1-INPUT -s 209.239.126.76 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.47.129 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.169.218 -j DROP
-A RH-Firewall-1-INPUT -s 192.210.199.58 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.122.234 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.246.54 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.169.178 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.146.14 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.4.138 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.4.169 -j DROP
-A RH-Firewall-1-INPUT -s 107.182.22.14 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.186.18 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.94.14 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.51 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.216.148 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.229.128 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.180.26 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.49.146 -j DROP
-A RH-Firewall-1-INPUT -s 198.12.93.140 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.16.107 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.190.130 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.228.138 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.88.33 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.64.241 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.5.91 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.67.212 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.65.26 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.64.74 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.230.90 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.197.234 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.66.235 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.249.122 -j DROP
-A RH-Firewall-1-INPUT -s 192.210.234.196 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.171.130 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.45.223 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.153.254 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.242.50 -j DROP
-A RH-Firewall-1-INPUT -s 94.75.244.146 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.224.42 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.128.118 -j DROP
-A RH-Firewall-1-INPUT -s 66.7.148.81 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.148.26 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.32.150 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.26.221 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.44.187 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.122 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.236.146 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.56.71 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.65.143 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.190.164 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.72.116 -j DROP
-A RH-Firewall-1-INPUT -s 50.30.32.89 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.56.114 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.213.32 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.99.227 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.240.130 -j DROP
-A RH-Firewall-1-INPUT -s 191.237.168.36 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.71.136 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.98.119 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.34.123 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.100.10 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.229.10 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.44.165 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.50.45 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.180.50 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.122 -j DROP
-A RH-Firewall-1-INPUT -s 107.182.22.38 -j DROP
-A RH-Firewall-1-INPUT -s 104.193.9.160 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.228.34 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.61.66 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.109.154 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.68.208 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.74 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.242.106 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.69.165 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.101 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.41 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.149.127 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.27.20 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.70.19 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.254.10 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.235.242 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.49.115 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.183.242 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.154 -j DROP
-A RH-Firewall-1-INPUT -s 104.148.64.26 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.251.197 -j DROP
-A RH-Firewall-1-INPUT -s 92.222.124.9 -j DROP
-A RH-Firewall-1-INPUT -s 178.33.111.207 -j DROP
-A RH-Firewall-1-INPUT -s 91.121.153.177 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.0.132 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.172 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.108.123 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.144.53 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.191.250 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.37.137 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.191 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.104 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.49.164 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.159 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.47.186 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.39.177 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.38.74 -j DROP
-A RH-Firewall-1-INPUT -s 158.85.100.148 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.210.147 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.214.249 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.155 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.78.216 -j DROP
-A RH-Firewall-1-INPUT -s 23.254.0.150 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.201 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.69 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.116 -j DROP
-A RH-Firewall-1-INPUT -s 142.4.222.228 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.160 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.10.130 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.81.35 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.41.139 -j DROP
-A RH-Firewall-1-INPUT -s 165.225.167.79 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.51.75 -j DROP
-A RH-Firewall-1-INPUT -s 142.0.41.115 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.117.5 -j DROP
-A RH-Firewall-1-INPUT -s 192.186.133.75 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.33.166 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.155.18 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.197.245 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.205 -j DROP
-A RH-Firewall-1-INPUT -s 192.96.201.134 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.164 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.219.217 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.146.202 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.91.209 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.191.235 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.110 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.115.164 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.114 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.51.76 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.24.16 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.237.162 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.187.66 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.50.12 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.209 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.150.10 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.10 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.144.154 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.170.234 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.228.146 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.100.90 -j DROP
-A RH-Firewall-1-INPUT -s 64.16.210.128 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.38.210 -j DROP
-A RH-Firewall-1-INPUT -s 94.102.51.111 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.194.101 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.117.3 -j DROP
-A RH-Firewall-1-INPUT -s 50.30.42.79 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.103.68 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.66.79 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.115.138 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.23.142 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.229.18 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.156.82 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.64.26 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.219.41 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.231.74 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.35 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.65.210 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.50.146 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.0.117 -j DROP
-A RH-Firewall-1-INPUT -s 192.227.156.21 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.190.66 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.72.237 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.65.90 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.163 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.11.220 -j DROP
-A RH-Firewall-1-INPUT -s 192.210.199.42 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.18.245 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.35.217 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.26.202 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.43.50 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.66.219 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.58 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.12.226 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.66.228 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.61.186 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.15.150 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.162 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.10.162 -j DROP
-A RH-Firewall-1-INPUT -s 208.69.231.210 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.44.210 -j DROP
-A RH-Firewall-1-INPUT -s 192.95.19.130 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.147.122 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.115.202 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.40.98 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.21.253 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.77.234 -j DROP
-A RH-Firewall-1-INPUT -s 204.12.206.84 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.224.10 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.169.147 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.57.122 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.140.186 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.186.16 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.233.146 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.228 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.21 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.129.80 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.14.150 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.108.67 -j DROP
-A RH-Firewall-1-INPUT -s 204.12.206.82 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.225.44 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.132.229 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.59.213 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.239.84 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.141.28 -j DROP
-A RH-Firewall-1-INPUT -s 206.221.178.234 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.203.110 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.100.178 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.8.51 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.11.142 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.15.252 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.180.27 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.84.36 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.149.66 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.216.86 -j DROP
-A RH-Firewall-1-INPUT -s 92.222.79.205 -j DROP
-A RH-Firewall-1-INPUT -s 92.222.64.246 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.176.78 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.176.106 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.66 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.72.139 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.206.250 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.56.160 -j DROP
-A RH-Firewall-1-INPUT -s 141.105.71.98 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.217.210 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.149.126 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.199 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.231.42 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.13.122 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.65.170 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.26.63 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.80.70 -j DROP
-A RH-Firewall-1-INPUT -s 192.96.201.135 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.132 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.141 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.84.13 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.83.165 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.38.162 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.48.64 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.125.90 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.41 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.14.115 -j DROP
-A RH-Firewall-1-INPUT -s 192.227.156.20 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.41.175 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.7.15 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.173 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.21.230 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.65.28 -j DROP
-A RH-Firewall-1-INPUT -s 192.186.154.163 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.9.251 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.21.228 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.26 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.90 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.65.34 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.87.120 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.86.243 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.23.17 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.98 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.192.185 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.129.134 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.46.66 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.139.67 -j DROP
-A RH-Firewall-1-INPUT -s 72.52.144.157 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.133.97 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.41.141 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.141.83 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.155 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.155 -j DROP
-A RH-Firewall-1-INPUT -s 142.0.41.179 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.86 -j DROP
-A RH-Firewall-1-INPUT -s 192.227.225.18 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.34.149 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.40.22 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.48.163 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.241.58 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.45.60 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.65.10 -j DROP
-A RH-Firewall-1-INPUT -s 104.193.10.80 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.70.30 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.166.218 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.160.57 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.104 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.181.74 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.115.140 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.56.12 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.23.132 -j DROP
-A RH-Firewall-1-INPUT -s 94.236.121.34 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.81.18 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.11.150 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.22 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.10 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.113.4 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.191.131 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.23 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.230.170 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.154.122 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.144.82 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.205.122 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.240.123 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.185.114 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.87.72 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.106 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.56.100 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.65 -j DROP
-A RH-Firewall-1-INPUT -s 151.236.43.81 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.181.178 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.181 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.231.4 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.105 -j DROP
-A RH-Firewall-1-INPUT -s 64.23.56.18 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.58.160 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.160.106 -j DROP
-A RH-Firewall-1-INPUT -s 198.12.124.202 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.3 -j DROP
-A RH-Firewall-1-INPUT -s 37.49.224.179 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.73.21 -j DROP
-A RH-Firewall-1-INPUT -s 5.104.105.103 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.69.7 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.12 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.166.70 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.83 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.103 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.4.84 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.229 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.152 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.50.230 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.65.27 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.124.50 -j DROP
-A RH-Firewall-1-INPUT -s 178.33.192.155 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.50.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.77.237 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.38.50 -j DROP
-A RH-Firewall-1-INPUT -s 104.171.124.227 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.174.158 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.222.65 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.27.138 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.86.96 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.52.180 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.222.199 -j DROP
-A RH-Firewall-1-INPUT -s 168.235.158.109 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.63.45 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.118.82 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.86.180 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.234.2 -j DROP
-A RH-Firewall-1-INPUT -s 151.236.42.234 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.49.51 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.86.181 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.51.136 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.215 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.75.214 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.115.199 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.246.202 -j DROP
-A RH-Firewall-1-INPUT -s 178.238.236.191 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.134 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.11.2 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.41 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.74.62 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.39.129 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.187.252 -j DROP
-A RH-Firewall-1-INPUT -s 192.227.244.42 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.30.221 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.98 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.58.34 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.127.202 -j DROP
-A RH-Firewall-1-INPUT -s 109.200.25.186 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.80.55 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.137 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.65.234 -j DROP
-A RH-Firewall-1-INPUT -s 104.130.46.201 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.27.4 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.141.80 -j DROP
-A RH-Firewall-1-INPUT -s 192.254.79.34 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.75.203 -j DROP
-A RH-Firewall-1-INPUT -s 61.10.191.43 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.103.84 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.74.94 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.74.187 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.12.88 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.44.54 -j DROP
-A RH-Firewall-1-INPUT -s 141.105.70.54 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.149.145 -j DROP
-A RH-Firewall-1-INPUT -s 185.5.223.16 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.56.128 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.177 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.135 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.183.102 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.144.73 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.178 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.50 -j DROP
-A RH-Firewall-1-INPUT -s 185.53.91.54 -j DROP
-A RH-Firewall-1-INPUT -s 158.85.248.196 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.194.115 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.46.63 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.84.35 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.20.115 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.77.236 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.11.246 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.170.35 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.126.42 -j DROP
-A RH-Firewall-1-INPUT -s 192.254.65.70 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.129.81 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.169.151 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.48.210 -j DROP
-A RH-Firewall-1-INPUT -s 198.23.189.26 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.156 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.72.170 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.98.107 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.5.94 -j DROP
-A RH-Firewall-1-INPUT -s 212.7.198.66 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.252.166 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.233.7 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.165.95 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.183.160 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.180.42 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.180.26 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.179.14 -j DROP
-A RH-Firewall-1-INPUT -s 23.254.0.147 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.241.15 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.76.232 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.50.130 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.87.75 -j DROP
-A RH-Firewall-1-INPUT -s 204.12.211.234 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.47.112 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.66.163 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.152.187 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.226.130 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.47.108 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.209.211 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.173.34 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.154 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.114.108 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.94.159 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.216.21 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.139.167 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.25.176 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.131 -j DROP
-A RH-Firewall-1-INPUT -s 107.182.20.226 -j DROP
-A RH-Firewall-1-INPUT -s 192.227.156.98 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.133 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.240.94 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.45.47 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.116.51 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.84.12 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.179 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.47.228 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.88.89 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.74.224 -j DROP
-A RH-Firewall-1-INPUT -s 66.135.55.37 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.245.227 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.11 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.197.106 -j DROP
-A RH-Firewall-1-INPUT -s 104.171.124.228 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.196.17 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.14.162 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.34.50 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.78.170 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.179.218 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.126 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.0.223 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.26.86 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.215.170 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.134 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.77 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.32.173 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.66.74 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.25 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.86.182 -j DROP
-A RH-Firewall-1-INPUT -s 164.40.129.50 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.31.190 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.75 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.140.186 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.179.226 -j DROP
-A RH-Firewall-1-INPUT -s 141.255.161.186 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.57.234 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.184.226 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.4.117 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.38.51 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.70.90 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.18 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.140 -j DROP
-A RH-Firewall-1-INPUT -s 178.238.232.93 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.200.235 -j DROP
-A RH-Firewall-1-INPUT -s 66.135.56.27 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.50.38 -j DROP
-A RH-Firewall-1-INPUT -s 154.98.23.142 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.58.163 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.11.147 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.27 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.227.202 -j DROP
-A RH-Firewall-1-INPUT -s 192.227.244.44 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.65.11 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.79.37 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.77.88 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.112 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.194.81 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.73.159 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.135.68 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.44.28 -j DROP
-A RH-Firewall-1-INPUT -s 192.186.154.166 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.46.60 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.26.196 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.80.106 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.119.65 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.69.124 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.62.203 -j DROP
-A RH-Firewall-1-INPUT -s 198.100.154.52 -j DROP
-A RH-Firewall-1-INPUT -s 185.53.91.58 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.4.70 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.89 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.56.156 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.251.65 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.1 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.119.226 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.227.186 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.61.185 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.215.198 -j DROP
-A RH-Firewall-1-INPUT -s 185.70.185.21 -j DROP
-A RH-Firewall-1-INPUT -s 185.7.215.62 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.45.145 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.150 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.27.28 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.236.162 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.88.233 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.69.222 -j DROP
-A RH-Firewall-1-INPUT -s 94.75.244.180 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.241.204 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.46.86 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.127.246 -j DROP
-A RH-Firewall-1-INPUT -s 192.241.71.150 -j DROP
-A RH-Firewall-1-INPUT -s 192.210.234.122 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.212 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.5.204 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.106.218 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.149.144 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.92.108 -j DROP
-A RH-Firewall-1-INPUT -s 216.245.203.194 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.98.234 -j DROP
-A RH-Firewall-1-INPUT -s 172.245.179.242 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.111 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.201.130 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.69.128 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.80.228 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.249.2 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.1.30 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.72.235 -j DROP
-A RH-Firewall-1-INPUT -s 176.67.111.32 -j DROP
-A RH-Firewall-1-INPUT -s 173.247.231.99 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.42.250 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.66 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.74.156 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.27.0 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.39.213 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.10.78 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.39.162 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.241 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.109.202 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.121 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.8.166 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.100.18 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.10.82 -j DROP
-A RH-Firewall-1-INPUT -s 217.160.178.241 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.208 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.13.58 -j DROP
-A RH-Firewall-1-INPUT -s 176.58.72.235 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.4.12 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.91.47 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.89.211 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.9.155 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.242.198 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.29 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.172.202 -j DROP
-A RH-Firewall-1-INPUT -s 185.70.185.5 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.63.42 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.99.118 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.90.82 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.227.117 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.117.203 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.13 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.0.114 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.35.146 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.49.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.61 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.7.72 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.51.42 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.84.38 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.199.73 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.9.85 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.65.152 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.16.88 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.93.82 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.205 -j DROP
-A RH-Firewall-1-INPUT -s 169.54.64.164 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.110 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.149.218 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.102.202 -j DROP
-A RH-Firewall-1-INPUT -s 194.90.107.37 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.54.193 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.55.26 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.11.202 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.66.66 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.171.202 -j DROP
-A RH-Firewall-1-INPUT -s 104.171.124.230 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.70.196 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.17 -j DROP
-A RH-Firewall-1-INPUT -s 142.4.200.8 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.194.241 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.105.228 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.3 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.78.13 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.178.33 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.127 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.45.27 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.244.24 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.159 -j DROP
-A RH-Firewall-1-INPUT -s 142.4.200.215 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.206.208 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.92.61 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.209.19 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.69.153 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.139.18 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.86.112 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.23.233 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.201.133 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.51.20 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.11.222 -j DROP
-A RH-Firewall-1-INPUT -s 178.32.131.42 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.20.114 -j DROP
-A RH-Firewall-1-INPUT -s 5.9.121.102 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.48.101 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.18.1 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.16.128 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.37.134 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.101.166 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.197 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.11 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.216.33 -j DROP
-A RH-Firewall-1-INPUT -s 192.210.144.186 -j DROP
-A RH-Firewall-1-INPUT -s 5.9.54.168 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.128 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.241.66 -j DROP
-A RH-Firewall-1-INPUT -s 168.235.158.108 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.88.184 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.42.102 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.3.10 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.20.63 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.45.198 -j DROP
-A RH-Firewall-1-INPUT -s 192.186.133.60 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.59.162 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.195 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.46.170 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.242.220 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.82.124 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.42.28 -j DROP
-A RH-Firewall-1-INPUT -s 192.169.219.172 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.248.85 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.74.250 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.53 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.132.242 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.23.70 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.43.193 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.56.182 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.96.32 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.88.61 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.218.106 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.147 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.66.42 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.167.99 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.16.54 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.181.86 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.98.242 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.33.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.82.59 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.86.245 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.15.141 -j DROP
-A RH-Firewall-1-INPUT -s 108.175.8.102 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.37.227 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.6.168 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.20.218 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.50.209 -j DROP
-A RH-Firewall-1-INPUT -s 37.202.84.141 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.41.138 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.242.213 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.28.251 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.12.234 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.111.194 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.241.170 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.21.227 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.77 -j DROP
-A RH-Firewall-1-INPUT -s 5.97.162.204 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.45.129 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.75.5 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.251.242 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.44.98 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.41.167 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.65.133 -j DROP
-A RH-Firewall-1-INPUT -s 162.252.162.149 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.247.120 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.226.211 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.119.205 -j DROP
-A RH-Firewall-1-INPUT -s 198.100.156.246 -j DROP
-A RH-Firewall-1-INPUT -s 95.128.47.78 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.190.162 -j DROP
-A RH-Firewall-1-INPUT -s 217.118.23.69 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.247 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.119.182 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.25.217 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.22 -j DROP
-A RH-Firewall-1-INPUT -s 198.23.192.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.125.32 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.98.41 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.26.163 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.157.117 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.86.179 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.63.194 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.58 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.187.192 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.165 -j DROP
-A RH-Firewall-1-INPUT -s 162.252.162.146 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.243.213 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.164 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.168.206 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.35.216 -j DROP
-A RH-Firewall-1-INPUT -s 92.222.64.147 -j DROP
-A RH-Firewall-1-INPUT -s 82.97.20.164 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.7.49 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.93 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.66.231 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.58.177 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.43 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.214.97 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.149 -j DROP
-A RH-Firewall-1-INPUT -s 178.238.232.218 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.149 -j DROP
-A RH-Firewall-1-INPUT -s 217.79.182.233 -j DROP
-A RH-Firewall-1-INPUT -s 212.26.122.8 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.111.100 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.125.2 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.197.122 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.21.91 -j DROP
-A RH-Firewall-1-INPUT -s 206.222.178.13 -j DROP
-A RH-Firewall-1-INPUT -s 80.243.189.130 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.69.82 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.233.108 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.195.173 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.123.146 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.116.159 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.240.159 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.200.162 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.194.34 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.69.98 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.11.218 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.57.120 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.74.68 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.82.23 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.229.11 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.148 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.85.78 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.142.9 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.165.115 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.210.58 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.2.31 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.87.109 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.243 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.179.62 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.93 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.39.215 -j DROP
-A RH-Firewall-1-INPUT -s 198.23.192.50 -j DROP
-A RH-Firewall-1-INPUT -s 178.32.247.119 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.178.98 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.94.70 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.80.234 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.53.231 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.214.166 -j DROP
-A RH-Firewall-1-INPUT -s 203.126.254.43 -j DROP
-A RH-Firewall-1-INPUT -s 197.35.106.141 -j DROP
-A RH-Firewall-1-INPUT -s 197.210.229.130 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.86.142 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.183.34 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.31.104 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.64 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.243.34 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.177.131 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.40.222 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.176.107 -j DROP
-A RH-Firewall-1-INPUT -s 162.253.153.13 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.226.200 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.89.155 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.39.212 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.20.102 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.14.73 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.230.34 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.157.182 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.49.46 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.98.67 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.27.191 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.101.185 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.149.234 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.37.158 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.126.44 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.30.205 -j DROP
-A RH-Firewall-1-INPUT -s 66.135.55.35 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.81.155 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.100 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.1.212 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.182.124 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.72.183 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.32.203 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.32.202 -j DROP
-A RH-Firewall-1-INPUT -s 92.222.67.69 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.203.162 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.190.171 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.76.13 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.39.28 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.129.128 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.180.117 -j DROP
-A RH-Firewall-1-INPUT -s 144.76.76.7 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.242.211 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.8.146 -j DROP
-A RH-Firewall-1-INPUT -s 198.100.156.70 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.53.55 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.167.76 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.156.74 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.206.58 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.69.230 -j DROP
-A RH-Firewall-1-INPUT -s 63.143.39.18 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.90.87 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.125 -j DROP
-A RH-Firewall-1-INPUT -s 62.135.96.56 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.88.174 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.156 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.42.174 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.6 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.78.200 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.37.235 -j DROP
-A RH-Firewall-1-INPUT -s 198.23.164.106 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.252.250 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.245.128 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.244.80 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.183.101 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.83.108 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.198.12 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.115 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.63.38 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.41.208 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.8.80 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.65.2 -j DROP
-A RH-Firewall-1-INPUT -s 178.238.234.111 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.139.132 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.34.206 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.241.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.188.66 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.79.211 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.102.90 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.244.73 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.171.106 -j DROP
-A RH-Firewall-1-INPUT -s 104.130.29.94 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.22.198 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.12.66 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.254.54 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.177.12 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.100.116 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.191 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.58.80 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.137 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.16 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.42.32 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.40.23 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.23.53 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.2.224 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.18.211 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.17.49 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.10.182 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.0.14 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.0.103 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.214.124 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.9.158 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.80.169 -j DROP
-A RH-Firewall-1-INPUT -s 185.19.220.206 -j DROP
-A RH-Firewall-1-INPUT -s 173.224.125.251 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.189 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.29.154 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.10.94 -j DROP
-A RH-Firewall-1-INPUT -s 80.243.178.202 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.11.221 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.185.127 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.220.220 -j DROP
-A RH-Firewall-1-INPUT -s 178.32.129.159 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.32.94 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.28.48 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.120 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.44.214 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.188 -j DROP
-A RH-Firewall-1-INPUT -s 217.118.23.71 -j DROP
-A RH-Firewall-1-INPUT -s 193.34.145.50 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.44 -j DROP
-A RH-Firewall-1-INPUT -s 69.197.182.196 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.41.255 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.208.152 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.1.25 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.191.102 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.190 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.254.45 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.91.53 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.65.65 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.24.168 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.67.209 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.115 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.125.63 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.181.98 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.242.132 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.40.208 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.251.199 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.6.86 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.1.192 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.28.170 -j DROP
-A RH-Firewall-1-INPUT -s 212.138.90.36 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.141.227 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.183 -j DROP
-A RH-Firewall-1-INPUT -s 173.204.244.244 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.46.210 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.96.47 -j DROP
-A RH-Firewall-1-INPUT -s 5.200.14.140 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.87.87 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.71.100 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.23.137 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.98.237 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.129.130 -j DROP
-A RH-Firewall-1-INPUT -s 195.78.202.84 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.42.17 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.100 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.124.120 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.8.40 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.30.55 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.15 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.29.25 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.77.32 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.61.68 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.89 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.39.124 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.30.85 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.29.229 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.11.226 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.187.234 -j DROP
-A RH-Firewall-1-INPUT -s 206.221.177.170 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.166.158 -j DROP
-A RH-Firewall-1-INPUT -s 192.95.16.76 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.9 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.44.218 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.203.250 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.189.175 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.190.186 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.79.15 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.28.33 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.14.27 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.133.94 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.164.178 -j DROP
-A RH-Firewall-1-INPUT -s 198.12.66.18 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.200 -j DROP
-A RH-Firewall-1-INPUT -s 192.210.198.178 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.157.179 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.1.101 -j DROP
-A RH-Firewall-1-INPUT -s 69.197.182.202 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.242.195 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.88.98 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.84 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.63.241 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.62.150 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.53.200 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.102 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.239.24 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.33.242 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.206.114 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.244.93 -j DROP
-A RH-Firewall-1-INPUT -s 185.53.91.55 -j DROP
-A RH-Firewall-1-INPUT -s 176.67.160.209 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.64.130 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.42.85 -j DROP
-A RH-Firewall-1-INPUT -s 141.105.71.201 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.60.203 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.37.162 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.160 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.248.159 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.20 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.38.209 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.57.126 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.56.111 -j DROP
-A RH-Firewall-1-INPUT -s 23.236.154.5 -j DROP
-A RH-Firewall-1-INPUT -s 198.15.69.122 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.40.170 -j DROP
-A RH-Firewall-1-INPUT -s 144.76.31.35 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.86.215 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.79.123 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.77.189 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.76 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.115.139 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.32.4 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.50.90 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.233 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.189 -j DROP
-A RH-Firewall-1-INPUT -s 52.5.147.125 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.72.142 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.12.108 -j DROP
-A RH-Firewall-1-INPUT -s 24.18.215.129 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.132.88 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.81 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.102 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.8.28 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.201.166 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.42.54 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.248.29 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.246 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.8.225 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.18.86 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.93.72 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.75.10 -j DROP
-A RH-Firewall-1-INPUT -s 5.9.82.234 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.84.41 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.11.219 -j DROP
-A RH-Firewall-1-INPUT -s 213.14.94.90 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.23.75 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.1.26 -j DROP
-A RH-Firewall-1-INPUT -s 192.186.154.165 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.32.146 -j DROP
-A RH-Firewall-1-INPUT -s 95.97.161.45 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.119.95 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.232 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.7.152 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.21.45 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.16.212 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.225.98 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.144 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.120 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.80.74 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.88.149 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.78.64 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.132 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.20.73 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.119 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.0.65 -j DROP
-A RH-Firewall-1-INPUT -s 198.100.156.68 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.242.122 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.225.65 -j DROP
-A RH-Firewall-1-INPUT -s 192.241.74.186 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.242.144 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.221.138 -j DROP
-A RH-Firewall-1-INPUT -s 185.15.244.29 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.136.133 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.203 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.103.83 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.119.124 -j DROP
-A RH-Firewall-1-INPUT -s 82.223.30.105 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.56.234 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.253.58 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.229.58 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.152.68 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.64 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.94.29 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.88.208 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.81.89 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.32.162 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.13.194 -j DROP
-A RH-Firewall-1-INPUT -s 216.155.138.226 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.115.151 -j DROP
-A RH-Firewall-1-INPUT -s 199.189.87.8 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.141.29 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.46 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.183.36 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.40.157 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.9.97 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.5.154 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.25.61 -j DROP
-A RH-Firewall-1-INPUT -s 24.205.149.179 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.247.122 -j DROP
-A RH-Firewall-1-INPUT -s 192.95.16.159 -j DROP
-A RH-Firewall-1-INPUT -s 176.58.69.222 -j DROP
-A RH-Firewall-1-INPUT -s 162.213.25.98 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.52.18 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.36.122 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.254.194 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.189.196 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.66 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.68.251 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.64.117 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.57.27 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.52.26 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.47 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.55.174 -j DROP
-A RH-Firewall-1-INPUT -s 206.221.187.50 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.96.138 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.170.36 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.100.98 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.41.250 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.193.106 -j DROP
-A RH-Firewall-1-INPUT -s 134.213.133.87 -j DROP
-A RH-Firewall-1-INPUT -s 104.130.240.248 -j DROP
-A RH-Firewall-1-INPUT -s 88.198.186.166 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.207.22 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.122 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.8.102 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.237 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.210.9 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.210.18 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.63.172 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.60.110 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.62 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.111 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.195 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.184.100 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.47.188 -j DROP
-A RH-Firewall-1-INPUT -s 142.4.201.236 -j DROP
-A RH-Firewall-1-INPUT -s 104.243.35.178 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.191.160 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.84.175 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.122.192 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.254.29 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.80 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.72.240 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.9 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.55.137 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.38.77 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.37.2 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.10.82 -j DROP
-A RH-Firewall-1-INPUT -s 31.210.122.82 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.40 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.126 -j DROP
-A RH-Firewall-1-INPUT -s 185.53.91.59 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.160 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.254.112 -j DROP
-A RH-Firewall-1-INPUT -s 72.52.245.86 -j DROP
-A RH-Firewall-1-INPUT -s 69.162.117.114 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.191.119 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.123.74 -j DROP
-A RH-Firewall-1-INPUT -s 41.130.236.24 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.7.194 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.132.64 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.133 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.241.198 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.112 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.5.175 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.199 -j DROP
-A RH-Firewall-1-INPUT -s 185.53.91.62 -j DROP
-A RH-Firewall-1-INPUT -s 182.118.38.167 -j DROP
-A RH-Firewall-1-INPUT -s 176.9.98.69 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.165 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.206.34 -j DROP
-A RH-Firewall-1-INPUT -s 162.244.28.31 -j DROP
-A RH-Firewall-1-INPUT -s 159.122.7.196 -j DROP
-A RH-Firewall-1-INPUT -s 141.105.70.25 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.5.205 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.21.1 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.16.37 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.10.235 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.232.106 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.190.80 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.93.239 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.71.231 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.159 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.56.45 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.56.140 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.47.163 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.168 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.31.139 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.30.96 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.24.47 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.20.161 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.19.17 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.11.222 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.1.125 -j DROP
-A RH-Firewall-1-INPUT -s 217.66.237.51 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.193.194 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.42.53 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.41.100 -j DROP
-A RH-Firewall-1-INPUT -s 89.163.239.57 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.112 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.8.19 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.31.47 -j DROP
-A RH-Firewall-1-INPUT -s 63.146.88.233 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.27 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.92.138 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.69.108 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.55.36 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.206 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.30.107 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.3.87 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.176.46 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.204 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.12.171 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.66.107 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.61 -j DROP
-A RH-Firewall-1-INPUT -s 192.95.37.134 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.196 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.95.44 -j DROP
-A RH-Firewall-1-INPUT -s 185.53.91.57 -j DROP
-A RH-Firewall-1-INPUT -s 177.54.144.92 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.172 -j DROP
-A RH-Firewall-1-INPUT -s 155.94.64.250 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.213.134 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.84.179 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.248.87 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.25.52 -j DROP
-A RH-Firewall-1-INPUT -s 80.195.68.84 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.238.66 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.77.57 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.222.231 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.85 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.146.7 -j DROP
-A RH-Firewall-1-INPUT -s 50.30.42.38 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.135.18 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.31 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.59.65 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.55.0 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.14.148 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.191.46 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.193 -j DROP
-A RH-Firewall-1-INPUT -s 206.221.178.18 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.119.231 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.77 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.163.211 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.33.3 -j DROP
-A RH-Firewall-1-INPUT -s 194.79.89.179 -j DROP
-A RH-Firewall-1-INPUT -s 194.249.0.36 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.102.178 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.16.204 -j DROP
-A RH-Firewall-1-INPUT -s 117.239.94.163 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.59.250 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.58.10 -j DROP
-A RH-Firewall-1-INPUT -s 104.193.9.153 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.211.90 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.104.156 -j DROP
-A RH-Firewall-1-INPUT -s 64.16.209.130 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.254.242 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.236.10 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.254.47 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.83.136 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.67 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.74 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.177.214 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.91 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.127.25 -j DROP
-A RH-Firewall-1-INPUT -s 5.101.168.211 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.165.4 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.54.75 -j DROP
-A RH-Firewall-1-INPUT -s 23.236.205.30 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.46.61 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.113.243 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.92 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.8.26 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.207.106 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.107 -j DROP
-A RH-Firewall-1-INPUT -s 185.63.252.49 -j DROP
-A RH-Firewall-1-INPUT -s 185.2.101.247 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.214.155 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.190 -j DROP
-A RH-Firewall-1-INPUT -s 162.144.70.181 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.65.29 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.10.201 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.182.231 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.173.71 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.51.37 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.89.73 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.89.168 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.165 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.190.56 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.73 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.65.107 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.190.182 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.135.19 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.25.71 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.220.215 -j DROP
-A RH-Firewall-1-INPUT -s 38.89.136.226 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.69.9 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.56.220 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.27.175 -j DROP
-A RH-Firewall-1-INPUT -s 23.254.1.67 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.71.20 -j DROP
-A RH-Firewall-1-INPUT -s 213.123.49.44 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.187.181 -j DROP
-A RH-Firewall-1-INPUT -s 212.47.238.77 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.2.46 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.1.24 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.100 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.117.69 -j DROP
-A RH-Firewall-1-INPUT -s 198.71.57.15 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.245.186 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.44.181 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.185.240 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.185.2 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.171.32 -j DROP
-A RH-Firewall-1-INPUT -s 188.227.181.58 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.246.237 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.16.254 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.34.253 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.125.135 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.110.180 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.161 -j DROP
-A RH-Firewall-1-INPUT -s 109.230.245.116 -j DROP
-A RH-Firewall-1-INPUT -s 109.169.86.28 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.32.250 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.195 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.157 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.178.90 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.197.23 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.104.130 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.250 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.8.179 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.30.128 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.106 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.11.50 -j DROP
-A RH-Firewall-1-INPUT -s 80.241.218.44 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.254.234 -j DROP
-A RH-Firewall-1-INPUT -s 69.162.104.178 -j DROP
-A RH-Firewall-1-INPUT -s 67.208.82.37 -j DROP
-A RH-Firewall-1-INPUT -s 64.251.10.91 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.5.91 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.87 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.174 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.108 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.56 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.129.15 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.122.106 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.30.73 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.25.67 -j DROP
-A RH-Firewall-1-INPUT -s 5.101.140.208 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.90.173 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.87.233 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.79.174 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.7.136 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.63.110 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.50.27 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.83 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.67 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.22.237 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.0.193 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.69.250 -j DROP
-A RH-Firewall-1-INPUT -s 213.79.103.19 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.171.95 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.135.5 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.38.252 -j DROP
-A RH-Firewall-1-INPUT -s 208.113.241.182 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.69.221 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.98.202 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.231.5 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.253.54 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.46.164 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.38.24 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.251.66 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.240.209 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.44.159 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.65.97 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.3.154 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.41.162 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.125.45 -j DROP
-A RH-Firewall-1-INPUT -s 185.17.185.33 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.43.73 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.219.105 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.40.194 -j DROP
-A RH-Firewall-1-INPUT -s 138.128.65.14 -j DROP
-A RH-Firewall-1-INPUT -s 112.1.30.234 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.119.238 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.139.59 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.255.114 -j DROP
-A RH-Firewall-1-INPUT -s 93.190.137.210 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.242.221 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.74.44 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.217.111 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.159.88 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.125.10 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.139.49 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.230 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.21.46 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.20.47 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.18.234 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.12.89 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.1.161 -j DROP
-A RH-Firewall-1-INPUT -s 78.157.210.104 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.65.100 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.201.50 -j DROP
-A RH-Firewall-1-INPUT -s 70.166.39.190 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.57.150 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.241.202 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.236.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.204.56 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.92.127 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.225 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.92 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.70 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.162.202 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.191.121 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.30.180 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.40.247 -j DROP
-A RH-Firewall-1-INPUT -s 5.101.140.217 -j DROP
-A RH-Firewall-1-INPUT -s 5.101.140.209 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.67.103 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.53.223 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.215.96 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.213.198 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.208.110 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.181.163 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.99 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.83.134 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.171.93 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.166.10 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.135.17 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.135.132 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.49.24 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.73 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.55 -j DROP
-A RH-Firewall-1-INPUT -s 199.189.84.88 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.142.7 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.34.183 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.34.148 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.68 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.3.62 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.247.204 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.246.16 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.12 -j DROP
-A RH-Firewall-1-INPUT -s 185.28.190.134 -j DROP
-A RH-Firewall-1-INPUT -s 183.157.160.66 -j DROP
-A RH-Firewall-1-INPUT -s 178.33.192.152 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.162 -j DROP
-A RH-Firewall-1-INPUT -s 173.224.113.97 -j DROP
-A RH-Firewall-1-INPUT -s 128.199.97.13 -j DROP
-A RH-Firewall-1-INPUT -s 109.230.220.167 -j DROP
-A RH-Firewall-1-INPUT -s 1.180.66.226 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.194 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.138 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.255.33 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.212.179 -j DROP
-A RH-Firewall-1-INPUT -s 94.229.72.38 -j DROP
-A RH-Firewall-1-INPUT -s 89.163.227.197 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.11 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.43.229 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.218.19 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.197.70 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.159.89 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.136.36 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.53 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.7.183 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.4.223 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.21.211 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.17.167 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.17.137 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.17.121 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.14.234 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.14.14 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.14.120 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.13.101 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.12.49 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.11.74 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.1.143 -j DROP
-A RH-Firewall-1-INPUT -s 81.94.195.50 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.152.232 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.33.115 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.240.26 -j DROP
-A RH-Firewall-1-INPUT -s 67.227.190.129 -j DROP
-A RH-Firewall-1-INPUT -s 64.16.210.155 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.233.106 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.94.47 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.73 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.175 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.85.236 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.216 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.69 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.151 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.153 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.146.81 -j DROP
-A RH-Firewall-1-INPUT -s 60.251.98.142 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.26.192 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.44.196 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.40.183 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.229 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.93.105 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.92.161 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.9.119 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.80.124 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.78.206 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.74.43 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.71.86 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.70.191 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.65.78 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.62.136 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.61.222 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.6.245 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.59.185 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.59.144 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.57.24 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.57.134 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.54.243 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.54.214 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.51.3 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.5.9 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.107 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.32 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.42.128 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.40.130 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.38.239 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.39 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.244 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.140 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.42 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.28.17 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.22.160 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.13.43 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.10.228 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.186 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.225.58 -j DROP
-A RH-Firewall-1-INPUT -s 213.74.202.125 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.81.163 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.179.5 -j DROP
-A RH-Firewall-1-INPUT -s 202.65.142.210 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.115.178 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.78 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.164.211 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.183.174 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.173.178 -j DROP
-A RH-Firewall-1-INPUT -s 193.104.149.50 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.9.9 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.195.203 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.11.212 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.89.54 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.114 -j DROP
-A RH-Firewall-1-INPUT -s 187.141.32.140 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.206.36 -j DROP
-A RH-Firewall-1-INPUT -s 173.68.130.198 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.184 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.182 -j DROP
-A RH-Firewall-1-INPUT -s 114.141.189.236 -j DROP
-A RH-Firewall-1-INPUT -s 108.161.136.44 -j DROP
-A RH-Firewall-1-INPUT -s 104.207.152.41 -j DROP
-A RH-Firewall-1-INPUT -s 104.148.64.10 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.164 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.254.88 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.210.206 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.207.75 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.15.27 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.109.191 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.103.221 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.48.174 -j DROP
-A RH-Firewall-1-INPUT -s 83.222.240.114 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.16.89 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.16.244 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.80.218 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.46.245 -j DROP
-A RH-Firewall-1-INPUT -s 74.118.193.96 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.167.142 -j DROP
-A RH-Firewall-1-INPUT -s 70.38.12.113 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.232.202 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.226.42 -j DROP
-A RH-Firewall-1-INPUT -s 67.208.82.39 -j DROP
-A RH-Firewall-1-INPUT -s 64.187.229.66 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.96.39 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.92.153 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.91.28 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.79.66 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.81 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.113.164 -j DROP
-A RH-Firewall-1-INPUT -s 58.22.87.35 -j DROP
-A RH-Firewall-1-INPUT -s 46.234.11.41 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.89.188 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.65.147 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.61.111 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.53.214 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.48.200 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.36.66 -j DROP
-A RH-Firewall-1-INPUT -s 218.93.239.38 -j DROP
-A RH-Firewall-1-INPUT -s 216.121.95.194 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.82.193 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.177.58 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.133.52 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.41 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.54.23 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.38.42 -j DROP
-A RH-Firewall-1-INPUT -s 209.239.126.68 -j DROP
-A RH-Firewall-1-INPUT -s 209.239.120.232 -j DROP
-A RH-Firewall-1-INPUT -s 208.27.177.224 -j DROP
-A RH-Firewall-1-INPUT -s 201.144.113.227 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.117.21 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.80 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.231.7 -j DROP
-A RH-Firewall-1-INPUT -s 198.8.60.129 -j DROP
-A RH-Firewall-1-INPUT -s 198.46.131.130 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.232.90 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.170.38 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.32.182 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.252.182 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.194.127 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.202 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.22 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.15.215 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.121.106 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.11 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.112 -j DROP
-A RH-Firewall-1-INPUT -s 186.46.83.139 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.211.204 -j DROP
-A RH-Firewall-1-INPUT -s 174.140.163.113 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.208 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.245.186 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.185.115 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.187 -j DROP
-A RH-Firewall-1-INPUT -s 149.3.134.243 -j DROP
-A RH-Firewall-1-INPUT -s 128.199.174.118 -j DROP
-A RH-Firewall-1-INPUT -s 109.230.220.13 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.191.141 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.63 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.246 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.242.210 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.112 -j DROP
-A RH-Firewall-1-INPUT -s 87.252.228.248 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.222.20 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.213.146 -j DROP
-A RH-Firewall-1-INPUT -s 82.97.20.166 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.26.139 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.20.178 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.83.3 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.18 -j DROP
-A RH-Firewall-1-INPUT -s 64.119.212.227 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.94.152 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.121 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.53 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.38 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.141.204 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.131.21 -j DROP
-A RH-Firewall-1-INPUT -s 61.222.220.128 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.194.114 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.31.92 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.29.129 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.26.214 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.47.18 -j DROP
-A RH-Firewall-1-INPUT -s 46.31.150.117 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.249.2 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.86.14 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.84.135 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.160 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.58.99 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.52.216 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.5.1 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.180 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.36.123 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.34.43 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.26.73 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.24.24 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.93 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.161.217 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.182.195 -j DROP
-A RH-Firewall-1-INPUT -s 23.254.1.68 -j DROP
-A RH-Firewall-1-INPUT -s 218.107.63.252 -j DROP
-A RH-Firewall-1-INPUT -s 216.2.130.7 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.84.130 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.80.238 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.171.92 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.238 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.202 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.63.133 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.49.25 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.74.111 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.69.218 -j DROP
-A RH-Firewall-1-INPUT -s 202.4.114.234 -j DROP
-A RH-Firewall-1-INPUT -s 199.231.48.5 -j DROP
-A RH-Firewall-1-INPUT -s 199.201.91.39 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.96 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.52 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.50 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.231.6 -j DROP
-A RH-Firewall-1-INPUT -s 198.144.156.145 -j DROP
-A RH-Firewall-1-INPUT -s 195.210.47.159 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.251.198 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.222.80 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.183.187 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.177.169 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.171.19 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.79 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.197 -j DROP
-A RH-Firewall-1-INPUT -s 192.170.146.131 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.152.154 -j DROP
-A RH-Firewall-1-INPUT -s 188.92.20.171 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.246.39 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.2.89 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.195.125 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.179.52 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.74 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.4.159 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.16.80 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.0.92 -j DROP
-A RH-Firewall-1-INPUT -s 187.93.133.82 -j DROP
-A RH-Firewall-1-INPUT -s 187.174.221.59 -j DROP
-A RH-Firewall-1-INPUT -s 185.19.223.245 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.211.207 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.175 -j DROP
-A RH-Firewall-1-INPUT -s 128.218.40.68 -j DROP
-A RH-Firewall-1-INPUT -s 117.121.25.240 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.41.202 -j DROP
-A RH-Firewall-1-INPUT -s 95.85.57.74 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.17 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.145 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.105 -j DROP
-A RH-Firewall-1-INPUT -s 95.0.83.133 -j DROP
-A RH-Firewall-1-INPUT -s 93.170.130.115 -j DROP
-A RH-Firewall-1-INPUT -s 89.150.19.169 -j DROP
-A RH-Firewall-1-INPUT -s 88.204.239.111 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.133 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.235.130 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.79.69 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.254 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.4 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.208 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.244 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.243 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.23.32 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.23.247 -j DROP
-A RH-Firewall-1-INPUT -s 82.223.29.122 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.16.94 -j DROP
-A RH-Firewall-1-INPUT -s 82.201.178.170 -j DROP
-A RH-Firewall-1-INPUT -s 77.74.194.166 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.235 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.90.66 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.135.131 -j DROP
-A RH-Firewall-1-INPUT -s 69.163.32.251 -j DROP
-A RH-Firewall-1-INPUT -s 69.162.122.34 -j DROP
-A RH-Firewall-1-INPUT -s 64.71.5.186 -j DROP
-A RH-Firewall-1-INPUT -s 63.235.151.35 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.236.136 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.207.0 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.90.229 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.87.99 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.83.58 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.36.232 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.151 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.128 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.249.97 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.249.124 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.219 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.118 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.163 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.39 -j DROP
-A RH-Firewall-1-INPUT -s 62.161.229.36 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.45.251 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.45.209 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.41.94 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.40.118 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.220.79 -j DROP
-A RH-Firewall-1-INPUT -s 37.9.62.25 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.217 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.80.108 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.62.11 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.206 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.135 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.18 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.22.236 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.2.212 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.10.85 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.163 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.161 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.209.24 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.79.101 -j DROP
-A RH-Firewall-1-INPUT -s 31.24.34.91 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.186.62 -j DROP
-A RH-Firewall-1-INPUT -s 31.214.201.196 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.81.151 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.186.153 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.171.94 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.132.65 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.62.127 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.60.66 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.38.45 -j DROP
-A RH-Firewall-1-INPUT -s 208.113.240.70 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.91.3 -j DROP
-A RH-Firewall-1-INPUT -s 202.170.63.70 -j DROP
-A RH-Firewall-1-INPUT -s 199.201.91.41 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.51 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.112 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.106.221 -j DROP
-A RH-Firewall-1-INPUT -s 199.189.84.92 -j DROP
-A RH-Firewall-1-INPUT -s 199.180.117.34 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.141.233 -j DROP
-A RH-Firewall-1-INPUT -s 199.15.254.90 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.231.36 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.241.194 -j DROP
-A RH-Firewall-1-INPUT -s 198.178.123.32 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.38.102 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.33.126 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.250.153 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.217.153 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.2 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.203 -j DROP
-A RH-Firewall-1-INPUT -s 192.241.91.218 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.85.178 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.114.142 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.9.233 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.247.228 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.183.33 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.12.104 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.11.65 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.94.245 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.8 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.113 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.34.254 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.25.9 -j DROP
-A RH-Firewall-1-INPUT -s 172.245.109.138 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.3.18 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.73.19 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.243.252 -j DROP
-A RH-Firewall-1-INPUT -s 109.73.75.130 -j DROP
-A RH-Firewall-1-INPUT -s 109.230.245.117 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.229.175 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.166.186 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.165.210 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.136.98 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.186.74 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.62.236 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.60.205 -j DROP
-A RH-Firewall-1-INPUT -s 96.8.120.94 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.21 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.205 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.179 -j DROP
-A RH-Firewall-1-INPUT -s 95.110.186.196 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.254.159 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.222.52 -j DROP
-A RH-Firewall-1-INPUT -s 94.102.53.152 -j DROP
-A RH-Firewall-1-INPUT -s 93.190.141.199 -j DROP
-A RH-Firewall-1-INPUT -s 91.194.91.41 -j DROP
-A RH-Firewall-1-INPUT -s 91.109.11.168 -j DROP
-A RH-Firewall-1-INPUT -s 89.163.227.171 -j DROP
-A RH-Firewall-1-INPUT -s 85.252.200.30 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.76.100 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.218.138 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.17 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.211.109 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.47 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.157.115 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.100.123 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.96.143 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.248 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.78.190 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.182.146 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.182.140 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.128.54 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.158 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.51.133 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.89 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.12.113 -j DROP
-A RH-Firewall-1-INPUT -s 82.113.129.218 -j DROP
-A RH-Firewall-1-INPUT -s 81.94.195.90 -j DROP
-A RH-Firewall-1-INPUT -s 81.30.158.240 -j DROP
-A RH-Firewall-1-INPUT -s 81.200.81.173 -j DROP
-A RH-Firewall-1-INPUT -s 80.84.62.162 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.68.58 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.68.42 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.29.242 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.47.88 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.167.221 -j DROP
-A RH-Firewall-1-INPUT -s 74.118.193.33 -j DROP
-A RH-Firewall-1-INPUT -s 72.235.185.131 -j DROP
-A RH-Firewall-1-INPUT -s 70.169.66.243 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.52.222 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.248.82 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.240.90 -j DROP
-A RH-Firewall-1-INPUT -s 68.64.165.42 -j DROP
-A RH-Firewall-1-INPUT -s 67.20.63.71 -j DROP
-A RH-Firewall-1-INPUT -s 66.240.236.119 -j DROP
-A RH-Firewall-1-INPUT -s 64.251.13.233 -j DROP
-A RH-Firewall-1-INPUT -s 64.237.46.154 -j DROP
-A RH-Firewall-1-INPUT -s 64.187.229.34 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.247.210 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.207.57 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.207.121 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.206.161 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.136.165 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.95.18 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.95.17 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.94.106 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.92.211 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.90.194 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.90.162 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.87.43 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.209 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.101 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.83.9 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.190 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.48 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.29 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.248.235 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.169 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.18 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.189.135 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.195 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.170.69 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.101 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.146.3 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.147 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.137 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.132 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.139.164 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.12.54 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.36.49 -j DROP
-A RH-Firewall-1-INPUT -s 61.218.221.21 -j DROP
-A RH-Firewall-1-INPUT -s 50.30.42.18 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.191.48 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.191.177 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.41.255 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.41.2 -j DROP
-A RH-Firewall-1-INPUT -s 46.228.199.241 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.35.67 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.209.19 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.33.225 -j DROP
-A RH-Firewall-1-INPUT -s 41.160.67.198 -j DROP
-A RH-Firewall-1-INPUT -s 37.9.62.24 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.84.20 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.69.113 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.41.116 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.4.186 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.156 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.32.166 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.31.61 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.214.114 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.54.138 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.82.83 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.82.81 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.82.114 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.82.106 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.57.172 -j DROP
-A RH-Firewall-1-INPUT -s 31.214.169.87 -j DROP
-A RH-Firewall-1-INPUT -s 23.24.188.38 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.84.37 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.11.148 -j DROP
-A RH-Firewall-1-INPUT -s 216.245.197.2 -j DROP
-A RH-Firewall-1-INPUT -s 213.140.46.254 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.85.168 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.80.220 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.75.103 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.187.182 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.179.12 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.147.23 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.8.244 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.63.150 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.63.138 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.63.131 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.222 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.49.26 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.43.60 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.3.200 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.28.80 -j DROP
-A RH-Firewall-1-INPUT -s 209.99.97.157 -j DROP
-A RH-Firewall-1-INPUT -s 209.79.68.215 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.100.162 -j DROP
-A RH-Firewall-1-INPUT -s 208.96.135.165 -j DROP
-A RH-Firewall-1-INPUT -s 208.67.20.35 -j DROP
-A RH-Firewall-1-INPUT -s 208.185.48.50 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.71.161 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.69.229 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.69.216 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.66.108 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.60 -j DROP
-A RH-Firewall-1-INPUT -s 203.170.80.90 -j DROP
-A RH-Firewall-1-INPUT -s 202.124.98.42 -j DROP
-A RH-Firewall-1-INPUT -s 200.111.142.72 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.117.230 -j DROP
-A RH-Firewall-1-INPUT -s 199.201.91.35 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.82 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.79 -j DROP
-A RH-Firewall-1-INPUT -s 199.189.84.178 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.98.186 -j DROP
-A RH-Firewall-1-INPUT -s 198.7.56.218 -j DROP
-A RH-Firewall-1-INPUT -s 198.245.71.14 -j DROP
-A RH-Firewall-1-INPUT -s 197.189.234.74 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.91.223 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.57.91 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.57.42 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.39.5 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.38.225 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.253.79 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.241.80 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.222.54 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.183.70 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.178.25 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.168.119 -j DROP
-A RH-Firewall-1-INPUT -s 194.63.142.86 -j DROP
-A RH-Firewall-1-INPUT -s 194.63.140.245 -j DROP
-A RH-Firewall-1-INPUT -s 193.243.192.235 -j DROP
-A RH-Firewall-1-INPUT -s 193.164.131.174 -j DROP
-A RH-Firewall-1-INPUT -s 192.73.244.68 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.236 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.157 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.109.59 -j DROP
-A RH-Firewall-1-INPUT -s 192.186.133.170 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.64.87 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.5.186 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.112.55 -j DROP
-A RH-Firewall-1-INPUT -s 187.217.224.98 -j DROP
-A RH-Firewall-1-INPUT -s 185.7.214.244 -j DROP
-A RH-Firewall-1-INPUT -s 185.19.220.185 -j DROP
-A RH-Firewall-1-INPUT -s 182.75.35.171 -j DROP
-A RH-Firewall-1-INPUT -s 178.63.231.30 -j DROP
-A RH-Firewall-1-INPUT -s 178.62.106.171 -j DROP
-A RH-Firewall-1-INPUT -s 178.159.4.124 -j DROP
-A RH-Firewall-1-INPUT -s 177.54.144.254 -j DROP
-A RH-Firewall-1-INPUT -s 177.53.31.3 -j DROP
-A RH-Firewall-1-INPUT -s 174.140.166.229 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.203 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.201 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.215.45 -j DROP
-A RH-Firewall-1-INPUT -s 169.244.42.241 -j DROP
-A RH-Firewall-1-INPUT -s 162.246.61.192 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.136 -j DROP
-A RH-Firewall-1-INPUT -s 142.110.222.2 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.243.2 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.214.160 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.225.142 -j DROP
-A RH-Firewall-1-INPUT -s 119.192.169.46 -j DROP
-A RH-Firewall-1-INPUT -s 118.163.18.94 -j DROP
-A RH-Firewall-1-INPUT -s 116.247.103.46 -j DROP
-A RH-Firewall-1-INPUT -s 109.73.68.236 -j DROP
-A RH-Firewall-1-INPUT -s 109.230.220.168 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.139.133 -j DROP
-A RH-Firewall-1-INPUT -s 104.243.35.170 -j DROP
-A RH-Firewall-1-INPUT -s 104.193.8.235 -j DROP
-A RH-Firewall-1-INPUT -s 1.214.34.125 -j DROP
-A RH-Firewall-1-INPUT -s 95.79.102.121 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.69 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.150 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.148 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.254.153 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.254.152 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.42.195 -j DROP
-A RH-Firewall-1-INPUT -s 93.120.27.62 -j DROP
-A RH-Firewall-1-INPUT -s 89.248.168.42 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.200.35 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.196.170 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.177.42 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.43.94 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.195.172 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.200 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.157.106 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.151.166 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.125.11 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.242 -j DROP
-A RH-Firewall-1-INPUT -s 85.114.142.127 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.21 -j DROP
-A RH-Firewall-1-INPUT -s 83.136.252.245 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.22.51 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.17.120 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.72 -j DROP
-A RH-Firewall-1-INPUT -s 82.196.207.154 -j DROP
-A RH-Firewall-1-INPUT -s 81.94.205.2 -j DROP
-A RH-Firewall-1-INPUT -s 81.218.117.18 -j DROP
-A RH-Firewall-1-INPUT -s 80.82.209.252 -j DROP
-A RH-Firewall-1-INPUT -s 80.241.219.62 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.83.4 -j DROP
-A RH-Firewall-1-INPUT -s 78.46.92.147 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.240 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.237 -j DROP
-A RH-Firewall-1-INPUT -s 75.146.3.234 -j DROP
-A RH-Firewall-1-INPUT -s 74.81.93.42 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.70.95 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.69.198 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.69.162 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.43.253 -j DROP
-A RH-Firewall-1-INPUT -s 74.118.192.203 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.41.237 -j DROP
-A RH-Firewall-1-INPUT -s 69.162.54.17 -j DROP
-A RH-Firewall-1-INPUT -s 69.120.76.135 -j DROP
-A RH-Firewall-1-INPUT -s 68.32.49.66 -j DROP
-A RH-Firewall-1-INPUT -s 66.45.249.206 -j DROP
-A RH-Firewall-1-INPUT -s 66.240.192.138 -j DROP
-A RH-Firewall-1-INPUT -s 64.47.224.46 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.207.126 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.167.56 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.99.103 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.96.56 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.96.41 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.95.13 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.94.215 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.90.163 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.88.25 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.88.248 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.61 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.115 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.86.110 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.82.82 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.82.111 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.216 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.75.14 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.38.18 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.131 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.124 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.220 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.58 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.5 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.29 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.28 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.12 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.11 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.211 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.189.168 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.187.214 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.180.208 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.151 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.92 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.146.2 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.127.148 -j DROP
-A RH-Firewall-1-INPUT -s 61.134.122.168 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.143.31 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.129.91 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.211.138 -j DROP
-A RH-Firewall-1-INPUT -s 5.150.203.214 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.45.31 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.43.233 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.43.187 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.43.119 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.42.107 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.41.224 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.41.161 -j DROP
-A RH-Firewall-1-INPUT -s 46.218.9.105 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.35.81 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.161.100 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.160.84 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.160.38 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.160.152 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.211.163 -j DROP
-A RH-Firewall-1-INPUT -s 46.101.155.189 -j DROP
-A RH-Firewall-1-INPUT -s 37.9.62.23 -j DROP
-A RH-Firewall-1-INPUT -s 37.9.62.22 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.234 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.181 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.95.115 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.94.90 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.85.72 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.83.166 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.71.55 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.54.196 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.50.125 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.48.157 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.47.236 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.45.255 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.44.103 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.30.146 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.27.63 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.252 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.78.125 -j DROP
-A RH-Firewall-1-INPUT -s 37.230.118.32 -j DROP
-A RH-Firewall-1-INPUT -s 31.7.63.210 -j DROP
-A RH-Firewall-1-INPUT -s 31.3.240.186 -j DROP
-A RH-Firewall-1-INPUT -s 24.97.68.94 -j DROP
-A RH-Firewall-1-INPUT -s 24.176.184.58 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.0.138 -j DROP
-A RH-Firewall-1-INPUT -s 218.95.228.109 -j DROP
-A RH-Firewall-1-INPUT -s 217.172.190.218 -j DROP
-A RH-Firewall-1-INPUT -s 217.160.184.52 -j DROP
-A RH-Firewall-1-INPUT -s 217.160.177.123 -j DROP
-A RH-Firewall-1-INPUT -s 216.80.7.199 -j DROP
-A RH-Firewall-1-INPUT -s 216.245.213.210 -j DROP
-A RH-Firewall-1-INPUT -s 216.121.116.51 -j DROP
-A RH-Firewall-1-INPUT -s 213.171.222.69 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.80.216 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.79.208 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.75.67 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.75.227 -j DROP
-A RH-Firewall-1-INPUT -s 213.120.215.27 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.168.102 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.161.213 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.147.22 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.146.17 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.144.140 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.204 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.201 -j DROP
-A RH-Firewall-1-INPUT -s 212.80.190.108 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.62.36 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.238 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.58.71 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.58.20 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.41.150 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.40.26 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.4.235 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.3.139 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.1.23 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.1.15 -j DROP
-A RH-Firewall-1-INPUT -s 212.109.57.124 -j DROP
-A RH-Firewall-1-INPUT -s 211.20.61.193 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.67.88 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.111.101 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.109.78 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.105.19 -j DROP
-A RH-Firewall-1-INPUT -s 208.38.164.39 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.75.38 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.74.110 -j DROP
-A RH-Firewall-1-INPUT -s 203.88.129.94 -j DROP
-A RH-Firewall-1-INPUT -s 202.71.158.147 -j DROP
-A RH-Firewall-1-INPUT -s 202.62.64.12 -j DROP
-A RH-Firewall-1-INPUT -s 202.120.199.80 -j DROP
-A RH-Firewall-1-INPUT -s 201.236.150.195 -j DROP
-A RH-Firewall-1-INPUT -s 201.148.37.117 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.95 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.85 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.62 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.58 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.105 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.230.205 -j DROP
-A RH-Firewall-1-INPUT -s 198.98.53.30 -j DROP
-A RH-Firewall-1-INPUT -s 198.98.49.148 -j DROP
-A RH-Firewall-1-INPUT -s 198.7.61.123 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.229.130 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.66.104 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.245.26 -j DROP
-A RH-Firewall-1-INPUT -s 198.143.173.189 -j DROP
-A RH-Firewall-1-INPUT -s 198.143.173.183 -j DROP
-A RH-Firewall-1-INPUT -s 198.143.173.179 -j DROP
-A RH-Firewall-1-INPUT -s 196.15.250.110 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.55.112 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.51.203 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.49.25 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.38.97 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.32.88 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.32.241 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.252.138 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.251.225 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.235.38 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.200.239 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.20.110 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.199.93 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.177.86 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.169.119 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.167 -j DROP
-A RH-Firewall-1-INPUT -s 195.112.240.187 -j DROP
-A RH-Firewall-1-INPUT -s 194.226.244.181 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.99.9 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.45.119 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.148.36 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.101.149 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.198 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.92.178 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.158 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.125.242 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.121.42 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.109.61 -j DROP
-A RH-Firewall-1-INPUT -s 192.161.182.174 -j DROP
-A RH-Firewall-1-INPUT -s 192.111.222.94 -j DROP
-A RH-Firewall-1-INPUT -s 191.233.97.138 -j DROP
-A RH-Firewall-1-INPUT -s 190.151.105.12 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.66.102 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.4.231 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.4.156 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.246.82 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.2.29 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.187.207 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.185.173 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.14.28 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.10.198 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.75.87 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.28 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.41.212 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.34.202 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.26.211 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.26.190 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.24.147 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.125.38 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.113.43 -j DROP
-A RH-Firewall-1-INPUT -s 186.227.209.164 -j DROP
-A RH-Firewall-1-INPUT -s 185.82.200.89 -j DROP
-A RH-Firewall-1-INPUT -s 183.87.54.250 -j DROP
-A RH-Firewall-1-INPUT -s 178.62.142.97 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.213.26 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.212.18 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.205.194 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.42.148 -j DROP
-A RH-Firewall-1-INPUT -s 175.100.152.83 -j DROP
-A RH-Firewall-1-INPUT -s 173.243.112.115 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.185 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.169 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.168 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.163 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.186.130 -j DROP
-A RH-Firewall-1-INPUT -s 173.193.31.26 -j DROP
-A RH-Firewall-1-INPUT -s 173.13.138.209 -j DROP
-A RH-Firewall-1-INPUT -s 170.158.39.8 -j DROP
-A RH-Firewall-1-INPUT -s 168.235.155.126 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.68.197 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.28.219 -j DROP
-A RH-Firewall-1-INPUT -s 162.253.153.11 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.6.13 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.234 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.170 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.188.130 -j DROP
-A RH-Firewall-1-INPUT -s 142.0.33.211 -j DROP
-A RH-Firewall-1-INPUT -s 139.103.21.16 -j DROP
-A RH-Firewall-1-INPUT -s 125.63.92.146 -j DROP
-A RH-Firewall-1-INPUT -s 125.63.73.28 -j DROP
-A RH-Firewall-1-INPUT -s 125.129.124.42 -j DROP
-A RH-Firewall-1-INPUT -s 121.96.85.156 -j DROP
-A RH-Firewall-1-INPUT -s 12.187.109.52 -j DROP
-A RH-Firewall-1-INPUT -s 115.160.250.35 -j DROP
-A RH-Firewall-1-INPUT -s 114.255.39.244 -j DROP
-A RH-Firewall-1-INPUT -s 114.247.18.14 -j DROP
-A RH-Firewall-1-INPUT -s 109.228.18.157 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.204.43 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.202.168 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.198.214 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.187.251 -j DROP
-A RH-Firewall-1-INPUT -s 107.152.128.178 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.60.206 -j DROP
-A RH-Firewall-1-INPUT -s 107.0.208.143 -j DROP
-A RH-Firewall-1-INPUT -s 106.187.94.195 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.97.93 -j DROP
-A RH-Firewall-1-INPUT -s 104.148.64.2 -j DROP
-A RH-Firewall-1-INPUT -s 104.148.64.18 -j DROP
-A RH-Firewall-1-INPUT -s 103.249.82.54 -j DROP
-A RH-Firewall-1-INPUT -s 96.4.164.87 -j DROP
-A RH-Firewall-1-INPUT -s 95.211.153.42 -j DROP
-A RH-Firewall-1-INPUT -s 95.167.198.6 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.62 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.60 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.56 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.216 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.206 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.199 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.190 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.183 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.175 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.165 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.16 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.155 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.117 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.114 -j DROP
-A RH-Firewall-1-INPUT -s 95.163.121.113 -j DROP
-A RH-Firewall-1-INPUT -s 94.242.58.175 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.72.93 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.34.35 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.217.171 -j DROP
-A RH-Firewall-1-INPUT -s 94.229.72.34 -j DROP
-A RH-Firewall-1-INPUT -s 94.198.196.68 -j DROP
-A RH-Firewall-1-INPUT -s 93.93.184.19 -j DROP
-A RH-Firewall-1-INPUT -s 93.190.141.197 -j DROP
-A RH-Firewall-1-INPUT -s 93.170.7.3 -j DROP
-A RH-Firewall-1-INPUT -s 93.159.216.203 -j DROP
-A RH-Firewall-1-INPUT -s 92.222.189.76 -j DROP
-A RH-Firewall-1-INPUT -s 91.229.78.88 -j DROP
-A RH-Firewall-1-INPUT -s 91.229.220.20 -j DROP
-A RH-Firewall-1-INPUT -s 91.121.147.205 -j DROP
-A RH-Firewall-1-INPUT -s 91.109.24.195 -j DROP
-A RH-Firewall-1-INPUT -s 89.248.174.52 -j DROP
-A RH-Firewall-1-INPUT -s 89.248.169.47 -j DROP
-A RH-Firewall-1-INPUT -s 89.163.227.193 -j DROP
-A RH-Firewall-1-INPUT -s 89.163.225.108 -j DROP
-A RH-Firewall-1-INPUT -s 88.198.234.166 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.252.70 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.252.35 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.250.50 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.246.178 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.220 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.206 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.126 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.232.194 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.229.58 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.181.10 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.147.165 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.132.250 -j DROP
-A RH-Firewall-1-INPUT -s 88.12.60.216 -j DROP
-A RH-Firewall-1-INPUT -s 86.96.201.5 -j DROP
-A RH-Firewall-1-INPUT -s 85.254.49.22 -j DROP
-A RH-Firewall-1-INPUT -s 85.254.49.147 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.79.59 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.74.46 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.74.142 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.43.196 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.246.133 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.242.134 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.218.92 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.213.34 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.200.106 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.149.44 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.14.253 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.137.50 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.134.21 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.129.29 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.108.45 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.103.50 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.249 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.245 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.119.165 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.182.149 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.182.147 -j DROP
-A RH-Firewall-1-INPUT -s 85.17.182.144 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.53.119 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.50 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.52.43 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.50.231 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.50.179 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.5.47 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.48.175 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.48.152 -j DROP
-A RH-Firewall-1-INPUT -s 83.244.253.233 -j DROP
-A RH-Firewall-1-INPUT -s 83.236.181.2 -j DROP
-A RH-Firewall-1-INPUT -s 82.97.16.115 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.7.69 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.24.31 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.21.117 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.18.146 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.81 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.71 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.15.144 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.12.136 -j DROP
-A RH-Firewall-1-INPUT -s 82.205.1.87 -j DROP
-A RH-Firewall-1-INPUT -s 81.82.194.239 -j DROP
-A RH-Firewall-1-INPUT -s 81.171.110.132 -j DROP
-A RH-Firewall-1-INPUT -s 80.86.84.102 -j DROP
-A RH-Firewall-1-INPUT -s 80.252.220.155 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.188.132 -j DROP
-A RH-Firewall-1-INPUT -s 78.100.66.149 -j DROP
-A RH-Firewall-1-INPUT -s 77.66.112.67 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.78.146 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.252 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.246 -j DROP
-A RH-Firewall-1-INPUT -s 77.222.142.213 -j DROP
-A RH-Firewall-1-INPUT -s 77.220.66.23 -j DROP
-A RH-Firewall-1-INPUT -s 75.151.211.65 -j DROP
-A RH-Firewall-1-INPUT -s 75.150.162.123 -j DROP
-A RH-Firewall-1-INPUT -s 74.91.23.34 -j DROP
-A RH-Firewall-1-INPUT -s 74.85.7.10 -j DROP
-A RH-Firewall-1-INPUT -s 74.216.251.68 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.70.42 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.70.181 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.69.229 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.67.184 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.44.198 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.226.1 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.213.57 -j DROP
-A RH-Firewall-1-INPUT -s 74.208.148.183 -j DROP
-A RH-Firewall-1-INPUT -s 74.118.193.95 -j DROP
-A RH-Firewall-1-INPUT -s 74.118.193.68 -j DROP
-A RH-Firewall-1-INPUT -s 72.90.72.73 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.52 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.50 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.47 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.43 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.42 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.39 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.38 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.216.35 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.165.200 -j DROP
-A RH-Firewall-1-INPUT -s 70.38.64.230 -j DROP
-A RH-Firewall-1-INPUT -s 70.254.224.55 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.47.69 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.74 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.245.114 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.243.250 -j DROP
-A RH-Firewall-1-INPUT -s 69.162.74.74 -j DROP
-A RH-Firewall-1-INPUT -s 69.162.124.234 -j DROP
-A RH-Firewall-1-INPUT -s 68.112.84.99 -j DROP
-A RH-Firewall-1-INPUT -s 67.231.57.143 -j DROP
-A RH-Firewall-1-INPUT -s 67.227.190.167 -j DROP
-A RH-Firewall-1-INPUT -s 66.240.205.146 -j DROP
-A RH-Firewall-1-INPUT -s 66.114.114.40 -j DROP
-A RH-Firewall-1-INPUT -s 65.93.244.75 -j DROP
-A RH-Firewall-1-INPUT -s 65.196.11.245 -j DROP
-A RH-Firewall-1-INPUT -s 64.47.160.210 -j DROP
-A RH-Firewall-1-INPUT -s 64.251.10.106 -j DROP
-A RH-Firewall-1-INPUT -s 64.187.229.58 -j DROP
-A RH-Firewall-1-INPUT -s 64.16.210.158 -j DROP
-A RH-Firewall-1-INPUT -s 63.143.34.98 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.240.106 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.209.62 -j DROP
-A RH-Firewall-1-INPUT -s 63.116.182.82 -j DROP
-A RH-Firewall-1-INPUT -s 62.75.235.78 -j DROP
-A RH-Firewall-1-INPUT -s 62.28.232.10 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.95.33 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.95.30 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.94.140 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.93.59 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.93.239 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.93.163 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.93.135 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.91.21 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.91.120 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.89.78 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.89.114 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.88.49 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.87.114 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.84.108 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.83.98 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.82.96 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.82.141 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.79.205 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.79.200 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.213 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.78.165 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.71.87 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.69.72 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.69.62 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.6.188 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.53.226 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.50 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.240 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.9 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.250.128 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.187 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.49 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.245.132 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.62 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.222.65 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.217.92 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.217.106 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.211.233 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.209.176 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.208.220 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.208.218 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.205.206 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.189.142 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.188.82 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.181.153 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.178.21 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.177.172 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.92 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.60 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.59 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.114 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.167.105 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.152.10 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.151.156 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.80 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.53 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.171 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.148.111 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.146 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.143.141 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.142.83 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.140.191 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.131.135 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.125.115 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.124.248 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.124.246 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.123.100 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.113.19 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.113.14 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.11.170 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.56.61 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.45.74 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.44.168 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.37.198 -j DROP
-A RH-Firewall-1-INPUT -s 62.141.32.176 -j DROP
-A RH-Firewall-1-INPUT -s 62.119.32.115 -j DROP
-A RH-Firewall-1-INPUT -s 62.117.122.235 -j DROP
-A RH-Firewall-1-INPUT -s 61.220.51.232 -j DROP
-A RH-Firewall-1-INPUT -s 61.190.54.67 -j DROP
-A RH-Firewall-1-INPUT -s 61.16.223.21 -j DROP
-A RH-Firewall-1-INPUT -s 59.160.209.116 -j DROP
-A RH-Firewall-1-INPUT -s 59.120.185.102 -j DROP
-A RH-Firewall-1-INPUT -s 58.246.68.142 -j DROP
-A RH-Firewall-1-INPUT -s 52.16.132.175 -j DROP
-A RH-Firewall-1-INPUT -s 50.79.41.99 -j DROP
-A RH-Firewall-1-INPUT -s 50.7.167.5 -j DROP
-A RH-Firewall-1-INPUT -s 50.7.165.90 -j DROP
-A RH-Firewall-1-INPUT -s 50.28.1.87 -j DROP
-A RH-Firewall-1-INPUT -s 50.204.26.5 -j DROP
-A RH-Firewall-1-INPUT -s 50.204.244.38 -j DROP
-A RH-Firewall-1-INPUT -s 50.192.204.70 -j DROP
-A RH-Firewall-1-INPUT -s 50.1.139.171 -j DROP
-A RH-Firewall-1-INPUT -s 5.42.225.11 -j DROP
-A RH-Firewall-1-INPUT -s 5.39.219.150 -j DROP
-A RH-Firewall-1-INPUT -s 5.199.169.146 -j DROP
-A RH-Firewall-1-INPUT -s 5.196.80.58 -j DROP
-A RH-Firewall-1-INPUT -s 5.196.110.112 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.190.103 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.190.101 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.129.75 -j DROP
-A RH-Firewall-1-INPUT -s 5.153.59.227 -j DROP
-A RH-Firewall-1-INPUT -s 5.152.208.59 -j DROP
-A RH-Firewall-1-INPUT -s 5.135.148.207 -j DROP
-A RH-Firewall-1-INPUT -s 5.135.140.44 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.29.60 -j DROP
-A RH-Firewall-1-INPUT -s 5.133.26.116 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.46.166 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.41.166 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.40.122 -j DROP
-A RH-Firewall-1-INPUT -s 49.156.60.12 -j DROP
-A RH-Firewall-1-INPUT -s 46.8.128.52 -j DROP
-A RH-Firewall-1-INPUT -s 46.38.51.136 -j DROP
-A RH-Firewall-1-INPUT -s 46.251.237.109 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.35.91 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.35.82 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.35.78 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.35.74 -j DROP
-A RH-Firewall-1-INPUT -s 46.183.220.250 -j DROP
-A RH-Firewall-1-INPUT -s 46.172.71.202 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.165.82 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.223.35 -j DROP
-A RH-Firewall-1-INPUT -s 46.137.37.163 -j DROP
-A RH-Firewall-1-INPUT -s 46.101.156.59 -j DROP
-A RH-Firewall-1-INPUT -s 45.63.48.116 -j DROP
-A RH-Firewall-1-INPUT -s 43.250.250.170 -j DROP
-A RH-Firewall-1-INPUT -s 42.112.25.15 -j DROP
-A RH-Firewall-1-INPUT -s 41.37.99.103 -j DROP
-A RH-Firewall-1-INPUT -s 38.74.136.202 -j DROP
-A RH-Firewall-1-INPUT -s 38.121.140.205 -j DROP
-A RH-Firewall-1-INPUT -s 37.9.62.21 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.90.59 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.9.159 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.85.193 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.82.215 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.77.41 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.70.219 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.70.118 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.64.42 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.63.143 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.60.35 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.49.232 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.55 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.46.214 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.43.34 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.39.222 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.174 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.35.115 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.247 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.175 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.33.0 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.26.141 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.23.188 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.21.137 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.18.83 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.15.169 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.12.107 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.0.85 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.0.157 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.213.148 -j DROP
-A RH-Firewall-1-INPUT -s 37.75.212.187 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.97.29 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.97.249 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.45.192 -j DROP
-A RH-Firewall-1-INPUT -s 37.58.110.218 -j DROP
-A RH-Firewall-1-INPUT -s 37.49.224.61 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.82.112 -j DROP
-A RH-Firewall-1-INPUT -s 37.48.73.203 -j DROP
-A RH-Firewall-1-INPUT -s 37.230.118.58 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.10.138 -j DROP
-A RH-Firewall-1-INPUT -s 37.19.87.11 -j DROP
-A RH-Firewall-1-INPUT -s 37.187.134.27 -j DROP
-A RH-Firewall-1-INPUT -s 37.157.246.138 -j DROP
-A RH-Firewall-1-INPUT -s 37.157.245.162 -j DROP
-A RH-Firewall-1-INPUT -s 37.0.124.158 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.191.64 -j DROP
-A RH-Firewall-1-INPUT -s 31.223.188.164 -j DROP
-A RH-Firewall-1-INPUT -s 31.214.223.133 -j DROP
-A RH-Firewall-1-INPUT -s 31.214.201.236 -j DROP
-A RH-Firewall-1-INPUT -s 31.171.244.24 -j DROP
-A RH-Firewall-1-INPUT -s 31.171.244.194 -j DROP
-A RH-Firewall-1-INPUT -s 31.132.4.196 -j DROP
-A RH-Firewall-1-INPUT -s 27.124.126.210 -j DROP
-A RH-Firewall-1-INPUT -s 27.109.24.107 -j DROP
-A RH-Firewall-1-INPUT -s 27.109.20.51 -j DROP
-A RH-Firewall-1-INPUT -s 27.109.11.60 -j DROP
-A RH-Firewall-1-INPUT -s 24.38.28.121 -j DROP
-A RH-Firewall-1-INPUT -s 24.203.232.94 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.33.156 -j DROP
-A RH-Firewall-1-INPUT -s 23.236.239.86 -j DROP
-A RH-Firewall-1-INPUT -s 23.236.155.162 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.98.66 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.51.66 -j DROP
-A RH-Firewall-1-INPUT -s 222.222.251.71 -j DROP
-A RH-Firewall-1-INPUT -s 222.185.235.244 -j DROP
-A RH-Firewall-1-INPUT -s 220.75.172.102 -j DROP
-A RH-Firewall-1-INPUT -s 219.87.81.205 -j DROP
-A RH-Firewall-1-INPUT -s 219.149.138.230 -j DROP
-A RH-Firewall-1-INPUT -s 219.146.8.78 -j DROP
-A RH-Firewall-1-INPUT -s 219.128.102.145 -j DROP
-A RH-Firewall-1-INPUT -s 218.249.18.41 -j DROP
-A RH-Firewall-1-INPUT -s 217.55.242.55 -j DROP
-A RH-Firewall-1-INPUT -s 217.172.189.46 -j DROP
-A RH-Firewall-1-INPUT -s 217.160.181.182 -j DROP
-A RH-Firewall-1-INPUT -s 217.160.177.77 -j DROP
-A RH-Firewall-1-INPUT -s 216.121.70.147 -j DROP
-A RH-Firewall-1-INPUT -s 216.120.248.241 -j DROP
-A RH-Firewall-1-INPUT -s 213.85.255.136 -j DROP
-A RH-Firewall-1-INPUT -s 213.230.5.191 -j DROP
-A RH-Firewall-1-INPUT -s 213.155.21.104 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.94.87 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.94.195 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.93.79 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.91.43 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.81.159 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.81.104 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.79.118 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.77.218 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.73.80 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.71.190 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.69.113 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.187.236 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.186.32 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.186.30 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.185.151 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.185.145 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.177.41 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.177.40 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.176.252 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.176.12 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.173.204 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.171.91 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.167.63 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.157.48 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.155.127 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.151.197 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.150.88 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.150.102 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.149.55 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.149.54 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.145.120 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.143.86 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.141.225 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.138.44 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.97 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.93 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.136.135 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.129.14 -j DROP
-A RH-Firewall-1-INPUT -s 212.57.102.98 -j DROP
-A RH-Firewall-1-INPUT -s 212.49.66.219 -j DROP
-A RH-Firewall-1-INPUT -s 212.46.245.131 -j DROP
-A RH-Firewall-1-INPUT -s 212.26.140.46 -j DROP
-A RH-Firewall-1-INPUT -s 212.150.104.15 -j DROP
-A RH-Firewall-1-INPUT -s 212.138.130.170 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.7.84 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.63.230 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.62.143 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.98 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.240 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.217 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.158 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.59.60 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.57.54 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.49.27 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.44.41 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.42.5 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.41.9 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.41.8 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.40.90 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.38.242 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.30.73 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.3.138 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.3.110 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.28.14 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.10.168 -j DROP
-A RH-Firewall-1-INPUT -s 210.32.133.130 -j DROP
-A RH-Firewall-1-INPUT -s 209.58.128.150 -j DROP
-A RH-Firewall-1-INPUT -s 209.239.120.246 -j DROP
-A RH-Firewall-1-INPUT -s 209.159.147.233 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.98.58 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.74.108 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.113.54 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.111.102 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.107.49 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.106.211 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.105.218 -j DROP
-A RH-Firewall-1-INPUT -s 208.77.217.205 -j DROP
-A RH-Firewall-1-INPUT -s 208.67.20.63 -j DROP
-A RH-Firewall-1-INPUT -s 208.52.191.88 -j DROP
-A RH-Firewall-1-INPUT -s 208.38.129.160 -j DROP
-A RH-Firewall-1-INPUT -s 208.115.202.178 -j DROP
-A RH-Firewall-1-INPUT -s 207.250.131.198 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.90.23 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.83.130 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.69.219 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.67.194 -j DROP
-A RH-Firewall-1-INPUT -s 207.225.51.24 -j DROP
-A RH-Firewall-1-INPUT -s 206.71.148.14 -j DROP
-A RH-Firewall-1-INPUT -s 206.217.129.22 -j DROP
-A RH-Firewall-1-INPUT -s 206.162.143.126 -j DROP
-A RH-Firewall-1-INPUT -s 204.93.154.222 -j DROP
-A RH-Firewall-1-INPUT -s 204.93.154.208 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.61 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.59 -j DROP
-A RH-Firewall-1-INPUT -s 204.107.204.11 -j DROP
-A RH-Firewall-1-INPUT -s 203.220.78.66 -j DROP
-A RH-Firewall-1-INPUT -s 203.200.180.173 -j DROP
-A RH-Firewall-1-INPUT -s 203.193.191.190 -j DROP
-A RH-Firewall-1-INPUT -s 203.146.255.117 -j DROP
-A RH-Firewall-1-INPUT -s 203.126.254.42 -j DROP
-A RH-Firewall-1-INPUT -s 203.122.8.109 -j DROP
-A RH-Firewall-1-INPUT -s 203.109.80.218 -j DROP
-A RH-Firewall-1-INPUT -s 202.51.103.171 -j DROP
-A RH-Firewall-1-INPUT -s 202.47.64.14 -j DROP
-A RH-Firewall-1-INPUT -s 202.108.94.154 -j DROP
-A RH-Firewall-1-INPUT -s 201.85.114.214 -j DROP
-A RH-Firewall-1-INPUT -s 201.77.236.27 -j DROP
-A RH-Firewall-1-INPUT -s 201.22.125.165 -j DROP
-A RH-Firewall-1-INPUT -s 200.61.181.65 -j DROP
-A RH-Firewall-1-INPUT -s 200.41.179.94 -j DROP
-A RH-Firewall-1-INPUT -s 200.201.206.20 -j DROP
-A RH-Firewall-1-INPUT -s 200.13.253.84 -j DROP
-A RH-Firewall-1-INPUT -s 200.113.220.94 -j DROP
-A RH-Firewall-1-INPUT -s 199.233.45.17 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.118.79 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.113.237 -j DROP
-A RH-Firewall-1-INPUT -s 199.204.238.38 -j DROP
-A RH-Firewall-1-INPUT -s 199.201.91.37 -j DROP
-A RH-Firewall-1-INPUT -s 199.192.241.74 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.88 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.83 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.76 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.70 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.106 -j DROP
-A RH-Firewall-1-INPUT -s 199.180.115.94 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.143.230 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.143.227 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.142.8 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.142.250 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.142.10 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.102.203 -j DROP
-A RH-Firewall-1-INPUT -s 199.15.114.44 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.231.37 -j DROP
-A RH-Firewall-1-INPUT -s 198.72.123.253 -j DROP
-A RH-Firewall-1-INPUT -s 198.72.123.214 -j DROP
-A RH-Firewall-1-INPUT -s 198.7.61.125 -j DROP
-A RH-Firewall-1-INPUT -s 198.7.61.124 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.163.93 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.157.104 -j DROP
-A RH-Firewall-1-INPUT -s 198.50.145.165 -j DROP
-A RH-Firewall-1-INPUT -s 198.46.131.131 -j DROP
-A RH-Firewall-1-INPUT -s 198.38.85.119 -j DROP
-A RH-Firewall-1-INPUT -s 198.27.65.196 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.252.186 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.247.218 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.242.140 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.70.114 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.69.98 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.175.34 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.165.117 -j DROP
-A RH-Firewall-1-INPUT -s 198.144.176.118 -j DROP
-A RH-Firewall-1-INPUT -s 198.143.173.185 -j DROP
-A RH-Firewall-1-INPUT -s 198.143.173.180 -j DROP
-A RH-Firewall-1-INPUT -s 198.143.173.177 -j DROP
-A RH-Firewall-1-INPUT -s 197.161.135.144 -j DROP
-A RH-Firewall-1-INPUT -s 197.14.49.106 -j DROP
-A RH-Firewall-1-INPUT -s 197.135.143.201 -j DROP
-A RH-Firewall-1-INPUT -s 196.27.98.2 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.58.153 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.57.99 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.55.103 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.51.229 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.51.228 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.49.26 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.46.135 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.32.14 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.255.29 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.253.52 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.253.146 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.252.80 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.252.213 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.252.178 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.251.217 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.237.64 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.232.86 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.225.61 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.215.206 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.211.118 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.20.176 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.191.140 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.187.125 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.184 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.124 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.175.4 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.174.94 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.169.141 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.146.233 -j DROP
-A RH-Firewall-1-INPUT -s 195.149.204.252 -j DROP
-A RH-Firewall-1-INPUT -s 195.1.61.96 -j DROP
-A RH-Firewall-1-INPUT -s 194.63.141.99 -j DROP
-A RH-Firewall-1-INPUT -s 194.206.175.113 -j DROP
-A RH-Firewall-1-INPUT -s 193.185.148.108 -j DROP
-A RH-Firewall-1-INPUT -s 193.107.16.225 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.47.165 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.47.154 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.43.236 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.19.45 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.126.14 -j DROP
-A RH-Firewall-1-INPUT -s 192.99.119.158 -j DROP
-A RH-Firewall-1-INPUT -s 192.73.243.151 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.204 -j DROP
-A RH-Firewall-1-INPUT -s 192.254.75.86 -j DROP
-A RH-Firewall-1-INPUT -s 192.241.91.22 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.99.142 -j DROP
-A RH-Firewall-1-INPUT -s 192.198.107.20 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.114.140 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.114.139 -j DROP
-A RH-Firewall-1-INPUT -s 192.155.249.186 -j DROP
-A RH-Firewall-1-INPUT -s 192.151.148.50 -j DROP
-A RH-Firewall-1-INPUT -s 191.33.224.43 -j DROP
-A RH-Firewall-1-INPUT -s 191.236.0.23 -j DROP
-A RH-Firewall-1-INPUT -s 191.101.153.120 -j DROP
-A RH-Firewall-1-INPUT -s 190.7.157.234 -j DROP
-A RH-Firewall-1-INPUT -s 190.242.118.28 -j DROP
-A RH-Firewall-1-INPUT -s 190.160.96.34 -j DROP
-A RH-Firewall-1-INPUT -s 190.153.48.124 -j DROP
-A RH-Firewall-1-INPUT -s 190.153.252.238 -j DROP
-A RH-Firewall-1-INPUT -s 189.78.155.70 -j DROP
-A RH-Firewall-1-INPUT -s 188.40.181.52 -j DROP
-A RH-Firewall-1-INPUT -s 188.226.248.72 -j DROP
-A RH-Firewall-1-INPUT -s 188.19.77.90 -j DROP
-A RH-Firewall-1-INPUT -s 188.19.73.50 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.239.44 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.224.200 -j DROP
-A RH-Firewall-1-INPUT -s 188.165.222.211 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.8.55 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.8.53 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.67.235 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.65.63 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.64.240 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.244.48 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.2.143 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.194.253 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.187.204 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.186.37 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.184.62 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.183.174 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.181.177 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.180.246 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.180.232 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.180.193 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.179.16 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.16.36 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.16.18 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.14.30 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.13.8 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.13.63 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.11.55 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.10.13 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.1.36 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.9.50 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.88.51 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.84.68 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.83.125 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.5.120 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.33.198 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.25.3 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.110.175 -j DROP
-A RH-Firewall-1-INPUT -s 187.84.201.70 -j DROP
-A RH-Firewall-1-INPUT -s 187.50.45.211 -j DROP
-A RH-Firewall-1-INPUT -s 187.217.233.9 -j DROP
-A RH-Firewall-1-INPUT -s 186.237.54.42 -j DROP
-A RH-Firewall-1-INPUT -s 186.237.49.44 -j DROP
-A RH-Firewall-1-INPUT -s 186.235.228.138 -j DROP
-A RH-Firewall-1-INPUT -s 186.177.17.157 -j DROP
-A RH-Firewall-1-INPUT -s 185.8.107.238 -j DROP
-A RH-Firewall-1-INPUT -s 185.63.189.240 -j DROP
-A RH-Firewall-1-INPUT -s 185.49.112.21 -j DROP
-A RH-Firewall-1-INPUT -s 185.45.193.101 -j DROP
-A RH-Firewall-1-INPUT -s 185.4.43.6 -j DROP
-A RH-Firewall-1-INPUT -s 185.24.234.42 -j DROP
-A RH-Firewall-1-INPUT -s 185.24.234.29 -j DROP
-A RH-Firewall-1-INPUT -s 185.24.234.145 -j DROP
-A RH-Firewall-1-INPUT -s 185.24.233.222 -j DROP
-A RH-Firewall-1-INPUT -s 185.24.233.117 -j DROP
-A RH-Firewall-1-INPUT -s 185.19.223.33 -j DROP
-A RH-Firewall-1-INPUT -s 185.19.220.211 -j DROP
-A RH-Firewall-1-INPUT -s 185.19.220.179 -j DROP
-A RH-Firewall-1-INPUT -s 185.12.7.111 -j DROP
-A RH-Firewall-1-INPUT -s 184.95.57.107 -j DROP
-A RH-Firewall-1-INPUT -s 184.71.185.26 -j DROP
-A RH-Firewall-1-INPUT -s 183.111.128.70 -j DROP
-A RH-Firewall-1-INPUT -s 182.98.238.222 -j DROP
-A RH-Firewall-1-INPUT -s 182.72.36.102 -j DROP
-A RH-Firewall-1-INPUT -s 182.52.69.37 -j DROP
-A RH-Firewall-1-INPUT -s 180.166.118.157 -j DROP
-A RH-Firewall-1-INPUT -s 180.151.226.53 -j DROP
-A RH-Firewall-1-INPUT -s 179.191.233.179 -j DROP
-A RH-Firewall-1-INPUT -s 178.62.133.40 -j DROP
-A RH-Firewall-1-INPUT -s 178.32.98.7 -j DROP
-A RH-Firewall-1-INPUT -s 178.239.178.45 -j DROP
-A RH-Firewall-1-INPUT -s 178.238.236.230 -j DROP
-A RH-Firewall-1-INPUT -s 178.214.64.68 -j DROP
-A RH-Firewall-1-INPUT -s 178.19.104.138 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.214.34 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.212.22 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.211.236 -j DROP
-A RH-Firewall-1-INPUT -s 177.99.180.102 -j DROP
-A RH-Firewall-1-INPUT -s 177.85.101.82 -j DROP
-A RH-Firewall-1-INPUT -s 177.39.220.87 -j DROP
-A RH-Firewall-1-INPUT -s 177.22.111.206 -j DROP
-A RH-Firewall-1-INPUT -s 177.11.1.75 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.211.66 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.199.26 -j DROP
-A RH-Firewall-1-INPUT -s 176.227.199.2 -j DROP
-A RH-Firewall-1-INPUT -s 176.21.106.222 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.44.240 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.43.133 -j DROP
-A RH-Firewall-1-INPUT -s 174.140.169.27 -j DROP
-A RH-Firewall-1-INPUT -s 173.247.232.58 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.202 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.199 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.188 -j DROP
-A RH-Firewall-1-INPUT -s 173.236.252.80 -j DROP
-A RH-Firewall-1-INPUT -s 173.236.251.91 -j DROP
-A RH-Firewall-1-INPUT -s 173.224.115.88 -j DROP
-A RH-Firewall-1-INPUT -s 173.208.242.178 -j DROP
-A RH-Firewall-1-INPUT -s 173.204.249.20 -j DROP
-A RH-Firewall-1-INPUT -s 173.204.244.245 -j DROP
-A RH-Firewall-1-INPUT -s 173.192.230.130 -j DROP
-A RH-Firewall-1-INPUT -s 173.192.221.42 -j DROP
-A RH-Firewall-1-INPUT -s 173.192.221.39 -j DROP
-A RH-Firewall-1-INPUT -s 173.161.192.161 -j DROP
-A RH-Firewall-1-INPUT -s 173.0.60.177 -j DROP
-A RH-Firewall-1-INPUT -s 173.0.60.131 -j DROP
-A RH-Firewall-1-INPUT -s 169.54.198.54 -j DROP
-A RH-Firewall-1-INPUT -s 168.1.2.116 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.144.48 -j DROP
-A RH-Firewall-1-INPUT -s 162.255.116.122 -j DROP
-A RH-Firewall-1-INPUT -s 162.252.83.50 -j DROP
-A RH-Firewall-1-INPUT -s 162.252.56.77 -j DROP
-A RH-Firewall-1-INPUT -s 162.244.81.170 -j DROP
-A RH-Firewall-1-INPUT -s 162.219.4.213 -j DROP
-A RH-Firewall-1-INPUT -s 162.210.197.39 -j DROP
-A RH-Firewall-1-INPUT -s 162.209.24.35 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.175.212 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.169.148 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.156.184 -j DROP
-A RH-Firewall-1-INPUT -s 159.253.137.101 -j DROP
-A RH-Firewall-1-INPUT -s 159.122.89.20 -j DROP
-A RH-Firewall-1-INPUT -s 158.85.209.180 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.6.130 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.6.126 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.6.120 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.2.79 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.2.216 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.2.214 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.2.14 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.240 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.167 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.1.157 -j DROP
-A RH-Firewall-1-INPUT -s 151.80.223.221 -j DROP
-A RH-Firewall-1-INPUT -s 151.236.57.158 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.219.117 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.171.204 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.171.200 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.142.72 -j DROP
-A RH-Firewall-1-INPUT -s 148.130.4.77 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.78.69 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.75.67 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.32.62 -j DROP
-A RH-Firewall-1-INPUT -s 145.255.31.73 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.185.82 -j DROP
-A RH-Firewall-1-INPUT -s 142.0.42.38 -j DROP
-A RH-Firewall-1-INPUT -s 141.105.71.235 -j DROP
-A RH-Firewall-1-INPUT -s 140.206.83.19 -j DROP
-A RH-Firewall-1-INPUT -s 14.102.114.22 -j DROP
-A RH-Firewall-1-INPUT -s 137.229.232.60 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.214.109 -j DROP
-A RH-Firewall-1-INPUT -s 134.213.51.154 -j DROP
-A RH-Firewall-1-INPUT -s 134.213.133.123 -j DROP
-A RH-Firewall-1-INPUT -s 128.199.35.172 -j DROP
-A RH-Firewall-1-INPUT -s 125.97.246.8 -j DROP
-A RH-Firewall-1-INPUT -s 124.232.163.29 -j DROP
-A RH-Firewall-1-INPUT -s 123.147.190.66 -j DROP
-A RH-Firewall-1-INPUT -s 122.216.208.236 -j DROP
-A RH-Firewall-1-INPUT -s 122.195.203.210 -j DROP
-A RH-Firewall-1-INPUT -s 122.129.80.221 -j DROP
-A RH-Firewall-1-INPUT -s 121.242.228.243 -j DROP
-A RH-Firewall-1-INPUT -s 12.149.84.162 -j DROP
-A RH-Firewall-1-INPUT -s 119.97.249.46 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.238.114 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.183.186 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.164.60 -j DROP
-A RH-Firewall-1-INPUT -s 119.75.10.83 -j DROP
-A RH-Firewall-1-INPUT -s 118.102.244.98 -j DROP
-A RH-Firewall-1-INPUT -s 115.84.179.42 -j DROP
-A RH-Firewall-1-INPUT -s 115.248.186.35 -j DROP
-A RH-Firewall-1-INPUT -s 115.186.147.169 -j DROP
-A RH-Firewall-1-INPUT -s 115.168.71.84 -j DROP
-A RH-Firewall-1-INPUT -s 115.160.250.36 -j DROP
-A RH-Firewall-1-INPUT -s 115.115.146.27 -j DROP
-A RH-Firewall-1-INPUT -s 112.4.91.130 -j DROP
-A RH-Firewall-1-INPUT -s 112.217.212.42 -j DROP
-A RH-Firewall-1-INPUT -s 110.34.170.58 -j DROP
-A RH-Firewall-1-INPUT -s 109.75.162.250 -j DROP
-A RH-Firewall-1-INPUT -s 109.73.77.148 -j DROP
-A RH-Firewall-1-INPUT -s 109.73.77.147 -j DROP
-A RH-Firewall-1-INPUT -s 109.230.222.90 -j DROP
-A RH-Firewall-1-INPUT -s 109.200.15.210 -j DROP
-A RH-Firewall-1-INPUT -s 109.200.0.50 -j DROP
-A RH-Firewall-1-INPUT -s 109.18.96.185 -j DROP
-A RH-Firewall-1-INPUT -s 109.169.87.109 -j DROP
-A RH-Firewall-1-INPUT -s 109.169.86.122 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.242.99 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.213.251 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.209.215 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.198.145 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.165.68 -j DROP
-A RH-Firewall-1-INPUT -s 108.253.103.21 -j DROP
-A RH-Firewall-1-INPUT -s 107.183.16.67 -j DROP
-A RH-Firewall-1-INPUT -s 107.183.16.66 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.60.170 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.52.238 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.50.91 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.46.2 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.43.42 -j DROP
-A RH-Firewall-1-INPUT -s 107.0.208.154 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.99.54 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.96.67 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.101.161 -j DROP
-A RH-Firewall-1-INPUT -s 104.207.146.101 -j DROP
-A RH-Firewall-1-INPUT -s 104.207.139.99 -j DROP
-A RH-Firewall-1-INPUT -s 104.192.0.19 -j DROP
-A RH-Firewall-1-INPUT -s 103.7.165.162 -j DROP
-A RH-Firewall-1-INPUT -s 103.5.202.134 -j DROP
-A RH-Firewall-1-INPUT -s 103.249.35.195 -j DROP
-A RH-Firewall-1-INPUT -s 103.10.230.28 -j DROP
-A RH-Firewall-1-INPUT -s 101.69.254.236 -j DROP
-A RH-Firewall-1-INPUT -s 91.236.75.198 -j DROP
-A RH-Firewall-1-INPUT -s 162.13.148.138 -j DROP
-A RH-Firewall-1-INPUT -s 198.204.235.50 -j DROP
-A RH-Firewall-1-INPUT -s 46.165.210.84 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.136.198 -j DROP
-A RH-Firewall-1-INPUT -s 10.11.203.36 -j DROP
-A RH-Firewall-1-INPUT -s 103.254.139.98 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.101.166 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.32.203 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.38.68 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.44 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.46 -j DROP
-A RH-Firewall-1-INPUT -s 108.61.226.10 -j DROP
-A RH-Firewall-1-INPUT -s 119.81.183.188 -j DROP
-A RH-Firewall-1-INPUT -s 12.149.84.162 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.214.109 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.214.161 -j DROP
-A RH-Firewall-1-INPUT -s 142.54.189.154 -j DROP
-A RH-Firewall-1-INPUT -s 144.76.76.7 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.42.68 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.73.19 -j DROP
-A RH-Firewall-1-INPUT -s 149.210.171.204 -j DROP
-A RH-Firewall-1-INPUT -s 1.50.80.188 -j DROP
-A RH-Firewall-1-INPUT -s 1.50.80.208 -j DROP
-A RH-Firewall-1-INPUT -s 1.50.80.248 -j DROP
-A RH-Firewall-1-INPUT -s 158.255.2.212 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.194.196 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.82.37 -j DROP
-A RH-Firewall-1-INPUT -s 162.211.172.48 -j DROP
-A RH-Firewall-1-INPUT -s 162.255.117.84 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.157.70 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.161 -j DROP
-A RH-Firewall-1-INPUT -s 173.242.117.190 -j DROP
-A RH-Firewall-1-INPUT -s 173.244.170.189 -j DROP
-A RH-Firewall-1-INPUT -s 176.106.41.250 -j DROP
-A RH-Firewall-1-INPUT -s 177.184.197.91 -j DROP
-A RH-Firewall-1-INPUT -s 177.54.144.254 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.201.166 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.206.36 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.211.236 -j DROP
-A RH-Firewall-1-INPUT -s 181.143.11.155 -j DROP
-A RH-Firewall-1-INPUT -s 182.93.2.108 -j DROP
-A RH-Firewall-1-INPUT -s 185.11.244.221 -j DROP
-A RH-Firewall-1-INPUT -s 187.217.233.9 -j DROP
-A RH-Firewall-1-INPUT -s 188.132.230.35 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.26.190 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.11 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.74 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.57.8 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.75.87 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.112.113 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.112.229 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.112.79 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.113.100 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.113.193 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.113.206 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.245.206 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.247.174 -j DROP
-A RH-Firewall-1-INPUT -s 189.208.232.162 -j DROP
-A RH-Firewall-1-INPUT -s 190.104.213.175 -j DROP
-A RH-Firewall-1-INPUT -s 190.27.197.109 -j DROP
-A RH-Firewall-1-INPUT -s 190.86.189.162 -j DROP
-A RH-Firewall-1-INPUT -s 191.250.24.245 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.115.202 -j DROP
-A RH-Firewall-1-INPUT -s 192.187.122.82 -j DROP
-A RH-Firewall-1-INPUT -s 192.3.207.226 -j DROP
-A RH-Firewall-1-INPUT -s 192.69.94.197 -j DROP
-A RH-Firewall-1-INPUT -s 193.107.17.70 -j DROP
-A RH-Firewall-1-INPUT -s 194.63.142.86 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.133.134 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.150.61 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.115 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.191.102 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.191.140 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.39.5 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.48.200 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.50.47 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.58.164 -j DROP
-A RH-Firewall-1-INPUT -s 197.35.80.238 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.69.98 -j DROP
-A RH-Firewall-1-INPUT -s 199.115.231.35 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.102.202 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.143.227 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.143.230 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.98.186 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.112 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.58 -j DROP
-A RH-Firewall-1-INPUT -s 199.204.238.38 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.113.243 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.116.187 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.116.51 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.119.231 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.101 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.149 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.164 -j DROP
-A RH-Firewall-1-INPUT -s 201.130.71.115 -j DROP
-A RH-Firewall-1-INPUT -s 201.159.225.251 -j DROP
-A RH-Firewall-1-INPUT -s 201.48.166.177 -j DROP
-A RH-Firewall-1-INPUT -s 201.77.236.11 -j DROP
-A RH-Firewall-1-INPUT -s 201.77.236.15 -j DROP
-A RH-Firewall-1-INPUT -s 201.77.236.16 -j DROP
-A RH-Firewall-1-INPUT -s 201.77.236.6 -j DROP
-A RH-Firewall-1-INPUT -s 201.85.114.214 -j DROP
-A RH-Firewall-1-INPUT -s 203.122.26.68 -j DROP
-A RH-Firewall-1-INPUT -s 203.147.34.56 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.59 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.62 -j DROP
-A RH-Firewall-1-INPUT -s 206.16.214.4 -j DROP
-A RH-Firewall-1-INPUT -s 206.80.46.24 -j DROP
-A RH-Firewall-1-INPUT -s 207.244.74.111 -j DROP
-A RH-Firewall-1-INPUT -s 208.3.140.43 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.109.76 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.109.78 -j DROP
-A RH-Firewall-1-INPUT -s 209.239.126.76 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.41.8 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.43.60 -j DROP
-A RH-Firewall-1-INPUT -s 212.129.61.193 -j DROP
-A RH-Firewall-1-INPUT -s 212.26.122.8 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.132.64 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.134.86 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.137.201 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.140.45 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.141.225 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.141.67 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.144.140 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.148.64 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.148.90 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.154.218 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.155.127 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.155.169 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.166.10 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.185.145 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.185.151 -j DROP
-A RH-Firewall-1-INPUT -s 213.136.75.227 -j DROP
-A RH-Firewall-1-INPUT -s 213.151.175.143 -j DROP
-A RH-Firewall-1-INPUT -s 223.29.228.219 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.51.42 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.65.170 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.66.66 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.66.74 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.11.219 -j DROP
-A RH-Firewall-1-INPUT -s 23.250.11.220 -j DROP
-A RH-Firewall-1-INPUT -s 23.254.1.67 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.103 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.29 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.53 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.76 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.99 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.149.226 -j DROP
-A RH-Firewall-1-INPUT -s 23.95.84.106 -j DROP
-A RH-Firewall-1-INPUT -s 37.220.10.138 -j DROP
-A RH-Firewall-1-INPUT -s 37.59.97.249 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.15.181 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.42.153 -j DROP
-A RH-Firewall-1-INPUT -s 46.105.121.38 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.172.133 -j DROP
-A RH-Firewall-1-INPUT -s 46.166.172.134 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.244.27 -j DROP
-A RH-Firewall-1-INPUT -s 47.21.197.250 -j DROP
-A RH-Firewall-1-INPUT -s 50.250.95.28 -j DROP
-A RH-Firewall-1-INPUT -s 5.10.124.117 -j DROP
-A RH-Firewall-1-INPUT -s 5.11.43.13 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.144.53 -j DROP
-A RH-Firewall-1-INPUT -s 5.189.191.177 -j DROP
-A RH-Firewall-1-INPUT -s 52.10.2.181 -j DROP
-A RH-Firewall-1-INPUT -s 5.39.218.37 -j DROP
-A RH-Firewall-1-INPUT -s 54.207.93.176 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.65.65 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.127.148 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.244.236 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.122 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.247.215 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.248.235 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.249.97 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.48 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.7.147 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.85.236 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.89.78 -j DROP
-A RH-Firewall-1-INPUT -s 63.141.247.210 -j DROP
-A RH-Firewall-1-INPUT -s 66.240.192.138 -j DROP
-A RH-Firewall-1-INPUT -s 66.240.236.119 -j DROP
-A RH-Firewall-1-INPUT -s 69.197.155.26 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.226.42 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.230.90 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.238.10 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.36.122 -j DROP
-A RH-Firewall-1-INPUT -s 69.64.40.157 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.135.131 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.165.200 -j DROP
-A RH-Firewall-1-INPUT -s 72.235.185.131 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.240 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.252 -j DROP
-A RH-Firewall-1-INPUT -s 79.143.83.90 -j DROP
-A RH-Firewall-1-INPUT -s 80.243.189.27 -j DROP
-A RH-Firewall-1-INPUT -s 80.82.64.68 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.244 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.136.36 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.160.173 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.202 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.208 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.229 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.4 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.208.70 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.213.31 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.143 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.17 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.203 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.254 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.38 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.43.94 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.95.13 -j DROP
-A RH-Firewall-1-INPUT -s 87.252.228.248 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.189 -j DROP
-A RH-Firewall-1-INPUT -s 88.150.240.220 -j DROP
-A RH-Firewall-1-INPUT -s 93.120.27.62 -j DROP
-A RH-Firewall-1-INPUT -s 94.23.86.78 -j DROP
-A RH-Firewall-1-INPUT -s 94.75.244.180 -j DROP
#Allow Ports
-A RH-Firewall-1-INPUT  -m state --state NEW -m tcp -p tcp --dport 9101:9103 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 2229 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m state --state NEW -m udp --dport 7038 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 7000 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m state --state NEW -m udp --dport 7000 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 7038 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 5555 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 7083 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m state --state NEW -m udp --dport 5060:5070 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 5060:5070 -j ACCEPT
#Allow Crossbar HTTP & HTTPS
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
#Blocking Database / Big Couch Access From Outside Unless Explicitly Allowed
-A RH-Firewall-1-INPUT -p tcp --dport 5984 -j DROP
-A RH-Firewall-1-INPUT -p tcp --dport 15984 -j DROP
-A RH-Firewall-1-INPUT -p tcp --dport 5986 -j DROP
#UDP Traffic Enablement
-A RH-Firewall-1-INPUT -p udp -m udp --dport 8000:32768 -j ACCEPT
-A RH-Firewall-1-INPUT -j LOG
-A RH-Firewall-1-INPUT -j DROP
COMMIT
# Completed on Thu Apr  2 04:38:31 2015
